--- a/_posts/2025-02-09-Diary.md
+++ b/_posts/2025-02-09-Diary.md
@@ -7,7 +7,7 @@ tags: Diary
 
  🚗 울산 출장 
 
-기아오토큐 남울산서비스점 실차 점검을 갔다. (전날 회식, 잠이 안와서 두 시간정도 잠을 자고 새벽 4시에 일어나서 본가에 가서 주차를 하고, 첫차를 타고 간 강행군..) 협력사에서 문제를 에스컬레이션 해주어서 실차 조사를 간 것이 화근이었다. 평소에 얼굴을 전혀 볼 수 없었던 카운터파트분의 대응을 잘해주시는 분을 뵀고, 무슨 연유에서 출장을 오히려 역제안(?)해주셨냐고 물어봤더니, 생산공장에서 가라고 했단다... 결국의 회사 안에서 이해관계가 있어야지 움직이는 것이구나, 동화같은 일을 생각했던 나였구나라는 생각이 스쳐갔다. 아직 회사 생활에 익숙해지려면 멀었구나
+기아오토큐 남울산서비스점 실차 점검을 갔다. (전날 회식, 잠이 안와서 두 시간정도 잠을 자고 새벽 4시 반에 일어나서 본가에 가서 주차를 하고, SRT를 타고 간 강행군..) 협력사에서 문제를 에스컬레이션 해주어서 실차 조사를 간 것이 화근이었다. 평소에 얼굴을 전혀 볼 수 없었던 카운터파트분의 대응을 잘해주시는 분을 뵀고, 무슨 연유에서 출장을 오히려 역제안(?)해주셨냐고 물어봤더니, 생산공장에서 가라고 했단다... 결국의 회사 안에서 이해관계가 있어야지 움직이는 것이구나, 동화같은 일을 생각했던 나였구나라는 생각이 스쳐갔다. 아직 회사 생활에 익숙해지려면 멀었구나
 
 ![Image](https://github.com/user-attachments/assets/6810222d-ab8b-4e8b-b630-c2d04bb77b4c)
 
