--- a/_posts/2025-02-28-Diary.md
+++ b/_posts/2025-02-28-Diary.md
@@ -1,5 +1,5 @@
 ---
-title: 밀린 숙제
+title: 밀린 숙제하듯이 블로그 몰아쓰기
 tags: Diary
 ---
 
@@ -19,25 +19,43 @@ tags: Diary
 자동차 회사에서 흔하게 볼 수 있는 것들.jpg
 
 ![Image](https://github.com/user-attachments/assets/fbfd24cd-20fe-4aff-8a41-60b717a31a2f)
+
 ![Image](https://github.com/user-attachments/assets/67644cb8-0030-4d54-8a78-6160179b09b3)
+
 ![Image](https://github.com/user-attachments/assets/2b4467c0-3904-431f-82ae-78b239843a4a)
+
 ![Image](https://github.com/user-attachments/assets/7de7f792-5812-4525-a759-a4264d263667)
+
 ![Image](https://github.com/user-attachments/assets/08b6b730-f83e-451f-8df2-ae5fd3a1fb92)
+
 ![Image](https://github.com/user-attachments/assets/ffd8237a-c0f8-4f29-b9e5-d349a7dd8e20)
+
 ![Image](https://github.com/user-attachments/assets/80febfff-0239-43a4-bcf0-196bc5721c86)
+
 ![Image](https://github.com/user-attachments/assets/999673cd-5fca-4840-b282-8f2086b6f465)
+
 ![Image](https://github.com/user-attachments/assets/835c35c3-73c1-464c-81a9-f4915066f5a2)
+
 ![Image](https://github.com/user-attachments/assets/408a6a6e-7e13-4eec-919a-9ea43a67448b)
+
 ![Image](https://github.com/user-attachments/assets/da082013-a80e-4a75-a3f4-595fcbb2b7fb)
+
 ![Image](https://github.com/user-attachments/assets/9e01a80b-58a8-4982-bb12-353d12e32b37)
+
 ![Image](https://github.com/user-attachments/assets/ffac25f7-3b02-4b38-8b26-278eabd1a6ee)
+
 ![Image](https://github.com/user-attachments/assets/917bd6c6-010e-4104-9e62-221c219c258f)
+
 ![Image](https://github.com/user-attachments/assets/d2fb8253-d8c8-4f76-8c1e-3bd589ecddfc)
+
 ![Image](https://github.com/user-attachments/assets/3bdb0333-9d0d-4457-aae6-93093468f5d7)
+
 ![Image](https://github.com/user-attachments/assets/9cb0b7f0-8d6e-4406-b3c0-33b4ba8cb1d2)
+
 ![Image](https://github.com/user-attachments/assets/7638a0cb-2435-44c6-b62c-7a3c3733dadb)
 
 <이번 달의 인사이트>
+
 ![Image](https://github.com/user-attachments/assets/2eba74a0-48c4-4f55-a127-ebd8aed10cfe)
 
 
