--- a/_posts/2025-03-16-Diary.md
+++ b/_posts/2025-03-16-Diary.md
@@ -43,4 +43,4 @@ tags: Diary
 
 이러한 정도의 출장 내지는 업무 요청이래야 어느정도 집단적인 린치를 암암리에 동의하는 것이라 무례한 사람들을 웃으면서 문제 없다고 말하고 있는 요즘이다 bb (엄지척)
 
-그나저나 Github 통해서 사진 올리고 있었는데, 기존에 사진 링크에 제목을 넣어줬는데 이제는 안넣어줘서 사진을 순서대로 넣기가 힘들다! fxxx
+그나저나 Github bugreport에서 사진을 올려서 링크를 받아서 사진 올리고 있었는데, 기존에 사진 링크에 제목을 넣어줬는데 이제는 안넣어줘서 사진을 순서대로 넣기가 힘들다! f!!!
