--- a/_posts/2025-03-30-Diary.md
+++ b/_posts/2025-03-30-Diary.md
@@ -9,8 +9,8 @@ tags: Diary
 
 3. 생각 없이 인스타그램 -> 유튜브 -> 인스타그램 반복하며 생각없이 지내는 것이 필요하다는 생각이 어쩌면 정형 행동일 수 있겠다는 생각
 
-4. 출장이나 여행이나 래퍼런스에서 인사이트를 얻으면 그것을 인사이트로 두는 것이 아니라 내 삶에 직접 적용을 시켜보는 것
+4. 출장이나 여행이나 래퍼런스에서 인사이트를 얻으면 그것을 인사이트로 두는 것이 아니라 내 삶에 직접 적용을 시켜보자는 생ㅏ
 
-5. 돈이 든다고 생각하는 것은 많은 서칭과 준비를 통해서 돈을 줄일 수 있는 방법이 있다는 것
+5. 돈이 든다고 생각하는 것은 많은 서칭과 준비를 통해서 돈을 줄일 수 있는 방법이 있다는 생각
 
-6. 예술가들이 작업을 하는 것처럼 나 또한 블로그를 작업이라고 생각하고 꾸준하게 갈고 닦을 것
+6. 예술가들이 작업을 하는 것처럼 나 또한 블로그를 작업이라고 생각하고 꾸준하게 갈고 닦자는 다짐
