--- a/_posts/2025-03-23-Diary.md
+++ b/_posts/2025-03-23-Diary.md
@@ -9,7 +9,7 @@ tags: Diary
  어디로 가는지 도시가 정해졌는데, 어떠한 것을 해야할지 모르겠다면 구글 지도를 통해서 일일이 확인하는 것도 좋지만, Tripadvisor 어플리케이션 이용해보면 사람들이 긍정적으로 생각하는 놀거리나 호텔을 확인할 수 있다. 
 
 2. 우리나라 유튜브, 블로그 찾아보기
-  우리나라 사람들은 정말 친절하게 유튜브랑 블로그에 엄청 요약을 많이 해두어서, 특히 정보가 없는 남미갈 때도 엄청 도움을 받을 수 있었다. 새로[text](2025-03-23-Diary.md)운 To-do 가 생겼는데, 네이버 블로그처럼 대외적(?)인 블로그 작성해보거나 유튜브 해보기 ... ㅋㅅㅋ
+  우리나라 사람들은 정말 친절하게 유튜브랑 블로그에 엄청 요약을 많이 해두어서, 특히 정보가 없는 남미갈 때도 엄청 도움을 받을 수 있었다. 새로운 To-do 가 생겼는데, 네이버 블로그처럼 대외적(?)인 블로그 작성해보거나 유튜브 해보기 ... ㅋㅅㅋ
 
 3. (애플한정) 애플 지도 칼럼 이용하기
  이건 내가 찾은 꿀팁인데 후후 애플 지도가 유독 미국에서 잘 되어 있다. 3D view 나 칼럼 큐레이션도 잘 해두었는데, 정말 색다르고 다른 사람들이 잘 모르는 곳을 가보고 싶다고 하면 애플 지도에 들어가서 다양한 칼럼을 읽어보는 것도 참고하면 좋다, 
