--- a/_posts/2025-04-20-Diary.md
+++ b/_posts/2025-04-20-Diary.md
@@ -11,10 +11,7 @@ tags: Diary
 
 3. 그럼에도 불구하고 리프레시하고 날 좋은 날에는 이만한 장소도 또 없다.
 
-![Image](https://github.com/user-attachments/assets/b86cac16-75ca-438e-931f-7152ba7acee0)
-
-![Image](https://github.com/user-attachments/assets/68939283-4246-4976-9f93-9f461c90b144)
-
-![Image](https://github.com/user-attachments/assets/280c7bcf-25c7-4017-bee1-48b6f9d09802)
-
-![Image](https://github.com/user-attachments/assets/90789994-b1d3-46c7-a9e2-d16264a8a6cc)
+![론뮤익1](assets/images/론뮤익 1.jpeg)
+![론뮤익2](assets/images/론뮤익 2.jpeg)
+![론뮤익3](assets/images/론뮤익 3.jpeg)
+![론뮤익4](assets/images/론뮤익 1.jpeg)
