--- a/_posts/2025-05-01-Review.md
+++ b/_posts/2025-05-01-Review.md
@@ -1,6 +1,6 @@
 ---
 title: 사람 장소 환대 2회독
-tags: Diary
+tags: Review Book
 ---
 
  글쓴이의 기본적인 태제는 궁극적으로 절대적인 환대를 진행하기 위한 것들이지만 그것에 관해서 어떠한 근거가 지나치게 감정적인 영역 (인지적인 영역)으로만 풀어가고 잇었기 때문에, 논리적으로 깔끔하지는 않았다. 또한 강론으로 들어가게 되면 절대적 환대라는 말은 공허한 말이라고 생각이 든다.는 말을 하였다.
