--- a/_posts/2025-04-20-Diary.md
+++ b/_posts/2025-04-20-Diary.md
@@ -11,7 +11,4 @@ tags: Diary
 
 3. 그럼에도 불구하고 리프레시하고 날 좋은 날에는 이만한 장소도 또 없다.
 
-![론뮤익1](assets/images/론뮤익 1.jpeg)
-![론뮤익2](assets/images/론뮤익 2.jpeg)
-![론뮤익3](assets/images/론뮤익 3.jpeg)
-![론뮤익4](assets/images/론뮤익 1.jpeg)
+이번에 상대경로를 사용하여서 이미지를 첨부하였는데, 과연 잘 작동하는지 봐보자
