--- a/_posts/2025-04-20-Diary.md
+++ b/_posts/2025-04-20-Diary.md
@@ -7,8 +7,16 @@ tags: Diary
 
 1. 황금 시간대의 경우에는 관람객이 지나칙 많이 모이므로 이 시간은 피해야한다.
 
+![image](assets/images/론뮤익 1.jpeg)
+
 2. 작품수가 많지 않아서 아쉽다.
+
+![image](assets/images/론뮤익 2.jpeg)
 
 3. 그럼에도 불구하고 리프레시하고 날 좋은 날에는 이만한 장소도 또 없다.
 
+![image](assets/images/론뮤익 3.jpeg)
+
 이번에 상대경로를 사용하여서 이미지를 첨부하였는데, 과연 잘 작동하는지 봐보자
+
+![image](assets/images/론뮤익 4.jpeg)
