--- a/_posts/2025-04-20-Diary.md
+++ b/_posts/2025-04-20-Diary.md
@@ -7,7 +7,8 @@ tags: Diary
 
 1. 황금 시간대의 경우에는 관람객이 지나칙 많이 모이므로 이 시간은 피해야한다.
 
-![image](assets/images/론뮤익 1.jpeg)
+blog images 로 추가 (너무 복잡한데 ..)
+![image](/blog images/론뮤익 1.jpeg)
 
 2. 작품수가 많지 않아서 아쉽다.
 
