--- a/_posts/2025-05-18-Diary.md
+++ b/_posts/2025-05-18-Diary.md
@@ -3,4 +3,6 @@ title: 플로우
 tags: Review Movie
 ---
 
-엄청난 홍수로 인해서 동물들이 배에서 겨우 생활을 하게 되는데, 확실하게 오스카 상을 받는 작품의 경우에는 
+![image](/assets/images/영화플로우.jpeg)
+
+엄청난 홍수로 인해서 동물들이 배에서 겨우 생활을 하게 되는데, 확실하게 오스카 상을 받는 작품의 경우에는 연출이랑 주제의 참신성이 너무 좋은데, 이번 영화에서도 동물들을 통해서 세계에서의 인간 관계에 보여주는 것이 좋았다.
