--- a/_posts/2025-04-20-Diary.md
+++ b/_posts/2025-04-20-Diary.md
@@ -5,18 +5,19 @@ tags: Diary
 
 국립현대미술관은 저렴하게 좋은 전시를 좋은 공간에서 볼 수 있어서 너무 좋다. 홍보도 잘되고, Hype를 몰고 올 수 있는 인스타그래머블한 작가 작품도 가져와서 좋다. 하지만 
 
-1. 황금 시간대의 경우에는 관람객이 지나칙 많이 모이므로 이 시간은 피해야한다.
-
 ![image](/assets/images/론뮤익1.jpeg)
 
-2. 작품수가 많지 않아서 아쉽다.
+1. 황금 시간대의 경우에는 관람객이 지나칙 많이 모이므로 이 시간은 피해야한다.
+
 ![image](/assets/images/론뮤익2.jpeg)
 
-3. 그럼에도 불구하고 리프레시하고 날 좋은 날에는 이만한 장소도 또 없다.
+2. 작품수가 많지 않아서 아쉽다.
+
 ![image](/assets/images/론뮤익3.jpeg)
 
 
-이번에 상대경로를 사용하여서 이미지를 첨부하였는데, 과연 잘 작동하는지 봐보자
+3. 그럼에도 불구하고 리프레시하고 날 좋은 날에는 이만한 장소도 또 없다.
+
 ![image](/assets/images/론뮤익4.jpeg)
 
-이제는 assets에다가 그림을 넣어두고 그것을 상대경로를 통해서 블로그 사진을 추가해보도록 하자
+이제 더이상 github blog 에서 bug report 를 통해서 이미지를 첨부하고 그 이미지를 blog 에 import하는 게 안되나보다 훌쩍.. 이제 정공법으로 이미지를 github에 넣고 상대 경로를 통해서 이미지를 추가하는 방법밖에 없겠군
