--- a/_posts/2025-05-30-Diary.md
+++ b/_posts/2025-05-30-Diary.md
@@ -7,4 +7,4 @@ tags: Diary
 
 2. 누나가 오늘은 면세로 지갑을 사주겠다고 연락이 와서 우리집은 공장 초기화를 해도 옹졸하고, 가난한 마음 뿐이라고 생각했는데 이렇게 하나하나 행복을 추구하는 것은 또 다르게 다가온다.  소금처럼 남은 짜디짠 가난이라고 생각했는데 그것이 우리 가족을 지탱해주고 있음을, 오르막길 하나 없던 다른 사람들을 보면서 그래도 다른 맛이 있음을 생각하면서 그것을 지키면서 살자
 
-3. 어제는 다리미를 안끄고 왔다는 생각 때문에 부랴부랴 집까지 다시 다녀왔다. 정리를 하지 않고, 부산스럽게 행동하는 것을 정말 주의해야지 라고 생각했었는데, 앞으로 회사에 갈 옷의 다리미질을 미리 저녁에 해두거나 아예 하지 않거나 해두자. 게다가 빨리 도어락을 사야하는데 요즘 다시 약속을 막 늘리고 있는데 거절할 수 있는 것은 딱 거절하기! 바쁘다고 말하기 ! 정말 중요하게 해야하는 것들이 많다 ㅜㅜ 다시 꾸역꾸역 퇴근하고 도서관으로 다시 출근을 하고 있는데, 계획, 공부, 오답노트까지 작성하는 습관을 가지도록 하자. 올해 2025년이 가기 전에는 정말 원하는 목표는 다 실행할 수 있도록, 과거의 기시감이 없는 2025를 보낼 수 있도록 큰 목표를 항상 상기하자. 나는 사람을 죽였다. 과거에 이장훈이라는 사람을.....와타시마 아쿠마다
+3. 어제는 다리미를 안끄고 왔다는 생각 때문에 부랴부랴 집까지 다시 다녀왔다. 정리를 하지 않고, 부산스럽게 행동하는 것을 정말 주의해야지 라고 생각했었는데, 앞으로 회사에 갈 옷의 다리미질을 미리 저녁에 해두거나 아예 하지 않거나 해두자. 게다가 빨리 도어락을 사야하는데 요즘 다시 약속을 막 늘리고 있는데 거절할 수 있는 것은 딱 거절하기! 바쁘다고 말하기 ! 정말 중요하게 해야하는 것들이 많다 ㅜㅜ 다시 꾸역꾸역 퇴근하고 도서관으로 다시 출근을 하고 있는데, 계획, 공부, 오답노트까지 작성하는 습관을 가지도록 하자. 올해 2025년이 가기 전에는 정말 원하는 목표는 다 실행할 수 있도록, 과거의 기시감이 없는 2025를 보낼 수 있도록 큰 목표를 항상 상기하자. 나는 사람을 죽였다. 과거에 이장훈이라는 사람을.....
