--- a/_posts/2025-06-08-Diary.md
+++ b/_posts/2025-06-08-Diary.md
@@ -5,23 +5,22 @@ tags: Diary
 
 ![image](/assets/images/250607-1.jpeg)
 
-1. 광기의 위스키, 위스키 바에 가서 오랜만에 자율전공학과 ㅎㅈ이랑 ㅈㅇ형이랑 ㅅㅎ형이랑 같이 마셨는데, 파프리카가 은근 궁합이 좋더라
-
+광기의 위스키, 위스키 바에 가서 오랜만에 자율전공학과 ㅎㅈ이랑 ㅈㅇ형이랑 ㅅㅎ형이랑 같이 마셨는데, 파프리카가 은근 궁합이 좋더라
 
 ![image](/assets/images/250607-2.jpeg)
 
 
 ![image](/assets/images/250607-11.jpeg)
 
-2. 광기의 주식 추천, 아너스 동생들이랑 밥을 먹었는데, 냅다 주식 추천과 함께 냅다 한강에 가서 스초생 퍼먹기 시전. 은근 춥더라
+광기의 주식 추천, 아너스 동생들이랑 밥을 먹었는데, 냅다 주식 추천과 함께 냅다 한강에 가서 스초생 퍼먹기 시전. 은근 춥더라
 
 ![image](/assets/images/250607-3.jpeg)
 
-3. 광기의 그릭 요거트. 나도 이제 그릭 요거트 요리사.29cm HOME 유튜브에서 타일러가 나와서 그릭 요거트를 직접 만들어 먹는 것이 잠깐 스쳐지나갔는데, 그것이 퍽 멋있어 보였다. 꽤나 간단하였다. 내가 좋아하는 이미지를 소비하는 것을 좋아한다. 건강하고 지속가능한 유러피안이 그것인데, 최근에 요리를 조금씩 시도해보려는 것도, 그리고 지속가능한 것에 소비를 하자고 생각하는 것도 그래서이다. 너무 파편적이고, 즉각적인 소비에만 집중하는 것이 아니라 요리하는 방법을 알고, 내 100세 인생을 위해서 하나하나 이제 걸음마 떼는 것이라고 시작하고, 이상한 것에 소비하는 것이 아니라 이러한 것들에 집중해야함을 느꼈다. 은근 맛있더라. 
+광기의 그릭 요거트. 나도 이제 그릭 요거트 요리사.29cm HOME 유튜브에서 타일러가 나와서 그릭 요거트를 직접 만들어 먹는 것이 잠깐 스쳐지나갔는데, 그것이 퍽 멋있어 보였다. 꽤나 간단하였다. 내가 좋아하는 이미지를 소비하는 것을 좋아한다. 건강하고 지속가능한 유러피안이 그것인데, 최근에 요리를 조금씩 시도해보려는 것도, 그리고 지속가능한 것에 소비를 하자고 생각하는 것도 그래서이다. 너무 파편적이고, 즉각적인 소비에만 집중하는 것이 아니라 요리하는 방법을 알고, 내 100세 인생을 위해서 하나하나 이제 걸음마 떼는 것이라고 시작하고, 이상한 것에 소비하는 것이 아니라 이러한 것들에 집중해야함을 느꼈다. 은근 맛있더라. 
 
 ![image](/assets/images/250607-4.jpeg)
 
-4. 광기의 사고 처리. 팰리세이드는 은근 무겁더라.
+광기의 사고 처리. 팰리세이드는 은근 무겁더라.
 
 ![image](/assets/images/250607-5.jpeg)
 ![image](/assets/images/250607-6.jpeg)
@@ -30,12 +29,12 @@ tags: Diary
 ![image](/assets/images/250607-9.jpeg)
 ![image](/assets/images/250607-10.jpeg)
 
-5. 광기의 무주 산골 영화제. 8시간 운전해서 가서 유다빈 밴드는 겨우 봤지만 정작 영화제임에도 불구하고 영화는 한 편만 보고 왔다. 무주산골영화제는 chill했다. 영화제에 참석하는 사람 특유의 특징이 있다. 동전만한 타투 여러 개, 감지 않은 머리, 보온병에 든 보리차... 정말 정말 가고 싶은 축제였는데, 우연하게 기억이 나서 예매는 성공. 하지만 연휴 시작을 지나치게 무시한 탓에 8시간 운전은 꽤 최악이었지만, 불행 중 다행으로 유다빈밴드의 공연은 볼 수 있었고, 햇빛이 선명하게 나뭇잎을 핥고 있는 와중에 쉼을 느꼈다. GV나 메인 영화를 못본 것이 아쉬워 이 기시감을 올해 부산국제영화제에서는 없기를 학습하자. 그래도 은근 좋더라.
+광기의 무주 산골 영화제. 8시간 운전해서 가서 유다빈 밴드는 겨우 봤지만 정작 영화제임에도 불구하고 영화는 한 편만 보고 왔다. 무주산골영화제는 chill했다. 영화제에 참석하는 사람 특유의 특징이 있다. 동전만한 타투 여러 개, 감지 않은 머리, 보온병에 든 보리차... 정말 정말 가고 싶은 축제였는데, 우연하게 기억이 나서 예매는 성공. 하지만 연휴 시작을 지나치게 무시한 탓에 8시간 운전은 꽤 최악이었지만, 불행 중 다행으로 유다빈밴드의 공연은 볼 수 있었고, 햇빛이 선명하게 나뭇잎을 핥고 있는 와중에 쉼을 느꼈다. GV나 메인 영화를 못본 것이 아쉬워 이 기시감을 올해 부산국제영화제에서는 없기를 학습하자. 그래도 은근 좋더라.
 
 ![image](/assets/images/250607-12.jpeg)
 
-6. 광기의 보드 게임, 오랜만에 내가 새롭게 접한 재밌는 보드 게임. 여기 정치가 다 있었다. 은근 무섭더라
+광기의 보드 게임, 오랜만에 내가 새롭게 접한 재밌는 보드 게임. 여기 정치가 다 있었다. 은근 무섭더라
 
 ![image](/assets/images/250607-13.jpeg)
 
-7. 광기의 민초단, 베스킨 라빈스 쿼터 네가지 맛을 민트로 채우는 사람들이 있다? 은근 맛있더라
+광기의 민초단, 베스킨 라빈스 쿼터 네가지 맛을 민트로 채우는 사람들이 있다? 은근 맛있더라
