--- a/_posts/2025-06-14-Diary.md
+++ b/_posts/2025-06-14-Diary.md
@@ -13,6 +13,6 @@ tags: Diary
 
 4. 경기도청년참여기구 정책 공론장에 참여를 하였고, 독서동아리지원센터에 선정되었다. 주말에는 나를 위한 시간을 마련할 것, 그럼에도 불구하고 평일에는 최대한 열심히 살아서 꽉꽉 채울 것. 인생 라이프 타임의 궤도가 어느정도 올라왔다는 생각이 든다.
 
-![image](/assets/images/25061402.jpeg)
-![image](/assets/images/25061403.jpeg)
-![image](/assets/images/25061404.jpeg)
+![image](/assets/images/25061402.png)
+![image](/assets/images/25061403.png)
+![image](/assets/images/25061404.png)
