--- a/_posts/2025-07-06-Diary.md
+++ b/_posts/2025-07-06-Diary.md
@@ -4,38 +4,38 @@ tags: Diary
 ---
 
 
-![image](/assets/images/260706_01.jpeg)
+![image](/assets/images/250706_01.jpeg)
 
-![image](/assets/images/260706_02.jpeg)
+![image](/assets/images/250706_02.jpeg)
 
-![image](/assets/images/260706_03.jpeg)
+![image](/assets/images/250706_03.jpeg)
 
 6/28
 경기청년참여기구 민관숙의토론, 각 분과별로 채택된 안건에 관해서 숙의토론을 통해서 정책협의를 진행하는 것인데, 정책조정위원회에서 참석하여서 정책에 관해서 같이 리뷰를 하는 자리였지만, ㅈㅅ이형이랑 나랑은 시큰둥 ~ 뭐 이렇게 많은 사람이 왔어야 하는 자리였는지 의문핑 그래서 형은 게임하였고, 나도 그냥 도시락 먹고 ㅃㅃㅇ
 
 
-![image](/assets/images/260706_05.jpeg)
+![image](/assets/images/250706_05.jpeg)
 
 6/30
 성남시장님과 치맥자리. 각 유스센터 활동가들이랑 같이 한 자리에서 치맥시간. 시장님과 이야기를 할 수 없어서 아쉬웠지만, 청소년청년재단 대표님과 이야기도 하고, 프로젝트를 디벨롭할 수 있는 기회를 가져서 만족스러운 하루였다. 성공했다는 생각 때문에 아드레날린이 너무 많이 나왔는지 저녁에 잠이 안와서 2시간만 자고 회사에 가서 꽤 고통스러운 일주일의 시작. 그래도 가는 길에 하늘은 이쁘더라
 
 
-![image](/assets/images/260706_06.jpeg)
+![image](/assets/images/250706_06.jpeg)
 
-![image](/assets/images/260706_07.jpeg)
+![image](/assets/images/250706_07.jpeg)
 
-![image](/assets/images/260706_08.jpeg)
+![image](/assets/images/250706_08.jpeg)
 
 
 7/2 ~ 7/4
 기아 PV5 차량 출시 전 트립 테스트 진행. 문제를 많이 발췌하였고, 맨 마지막에 이슈 리스트를 종합하는 것에서 살짝 아쉬웠지만, 그룹장님이 어레인지도 잘하고 이슈도 많이 발췌해서 너무 고생했다는 말을 해주었다. 그런 말을 하실 분이 아닌데, 칭찬을 들어서 꽤 뿌듯하였다. 출장 끝나고 그룹장님 집으로 모셔다(?)드리고 청년참여기구 마지막 오프라인 회의를 빙자한 수다 진행. 보드게임 카페에 가서 젝스님트, 바퀴벌레포커 등 여러 사람이 할 수 있는 게임을 하였어서 매우 유쾌하게 마무리를 지을 수 있었다.
 
-![image](/assets/images/260706_09.jpeg)
+![image](/assets/images/250706_09.jpeg)
 
-![image](/assets/images/260706_10.jpeg)
+![image](/assets/images/250706_10.jpeg)
 
 7/5
 정말 받고 싶었던 선물을 진짜 뜬금없이 받았다 ㅋㅋㅋ 너무 행복 ~ 그래도 어느 약속이든지 내가 정말 나가기 싫으면 안나가는 것이 답이구나 한번 더 생각하게 되었다. 굳이 시간이랑 돈이랑 쓸 필요가 없고 차라리 공부를 더 하자 ㅠㅠ
 
 7/6
-메모리 북클럽. 러브팩추얼리라는 상당히 자극적인 책 제목에 비해서 별로 건더기가 없었던 책. 많이 아쉬웠지만 책보다도 책을 매게로 이야기할 수 있는 사람들을 통해서 또 유쾌함으로 대화를 할 수 있었던 좋은 기회. 그러고 밀린 집안일이랑 청소를 완전히 끝내버렸다. 일요일은 lazy sunday 가 맞다.
+메모리 북클럽. 러브팩추얼리라는 상당히 자극적인 책 제목에 비해서 별로 건더기가 없었던 책. 많이 아쉬웠지만 책보다도 책을 매게로 이야기할 수 있는 사람들을 통해서 또 유쾌함으로 대화를 할 수 있었던 좋은 기회. 그러고 밀린 집안일이랑 청소를 완전히 끝내버렸다. 일요일은 lazy sunday 가 맞다. 밀린 블로그글을 와다다다 쓰고 있는데 집에 와이파이가 안되어서 못하고 있는 것들을 이제는 와이파이는 설치해야하지 않을까 골백번 생각하게 되네
