--- a/_posts/2025-07-06-Review.md
+++ b/_posts/2025-07-06-Review.md
@@ -3,8 +3,6 @@ title: 신성한 나무의 씨앗
 tags: Review Movie
 ---
 
-![image](/assets/images/250706_11.jpeg)
+![image](/assets/images/신성한 나무의 씨앗.png)
 
-영화가 주는 내용 그 자체만 보다도 그것이 사회적으로 어떠한 시사점을 주는지와 엮어서 생각하면 그것의 호소력이 더 깊어질 때가 있는데 이 영화가 꼭 그랬다. 물론 칸 영화제 황금종려상을 받은 영화인지 알고 봤지만, 그러지는 않았던 영화였고, 잔잔하게 흘러가는 감정적인 관계가 얽히고 섥히면서 어떻게 바뀌는지, 이란 국민들은 그것을 어떻게 보는지에 관해서 그들의 시선을 다소 알게 된 영화. 아직 21세기 문명 시대라고 하기에는 갈 길이 멀다. (한국 포함)
-
-찍어둔 사진이 있었는데 왠 QR 코드인가 했다 ㅎ
+영화가 주는 내용 그 자체만 보다도 그것이 사회적으로 어떠한 시사점을 주는지와 엮어서 생각하면 그것의 호소력이 더 깊어질 때가 있는데 이 영화가 꼭 그랬다. 물론 칸 영화제 황금종려상을 받은 영화인지 알고 봤지만, 그러지는 않았던 영화였고, 잔잔하게 흘러가는 감정적인 관계가 얽히고 섥히면서 어떻게 바뀌는지, 이란 국민들은 그것을 어떻게 보는지에 관해서 그들의 시선을 다소 알게 된 영화. 아직 21세기가 글로벌 문명 시대라고 하기에는 갈 길이 멀다. (한국 포함)
