--- a/_posts/2025-07-13-Review.md
+++ b/_posts/2025-07-13-Review.md
@@ -15,7 +15,7 @@ tags: Diary
 
 ![image](/assets/images/250714_3.jpeg)
 ![image](/assets/images/250714_4.jpeg)
-![image](/assets/images/250714_5.jpeg)
+![image](/assets/images/250714_5.png)
 
 독서토론동아리에서 받은 책들, 책도 열심히 읽는 한 해가 되어보자. 비록 책은 잘못 신청했지만 ㅠㅠ 당근마켓도 다시 열심히 활동하고 있다.
 
