--- a/_posts/2025-07-26-Diary.md
+++ b/_posts/2025-07-26-Diary.md
@@ -1,21 +1,20 @@
 ---
-title: 우당탕탕 영어 배우기
-tags: Diary
+title: 아니메쥬와 지브리 전시
+tags: Review Exhibition
 ---
 
- 해외출장이 워낙 잦게 있는 팀이라 영어는 영어답게 배워야한다고 생각해서 외국인 친구들이랑 친해질 수 있는 한국한중앙연구원 프로그램에 참석하여서 내고향 성남을 홍보할 수 있는 활동에 참석하였고, 대광사 -> 서현 -> 분당중앙공원은 특히 점점 히키코모리가 되어가고 지치면 굳이 안나가는 나에게 파란을 일으켜주었다. 외국인들이 주는 환대는 늘 한국의 그것이랑은 다르다는 것을 느낀다.
+어떻게 만화 평론 잡지는 만화를 제작하게 되었는가?
+흔히 생각하고 있는 무신사(무신사 스탠다드)나 코스트코 (커클랜드)와 같이 큐레이션이 나중에는 설득력이 생기고 그러한 것을 바탕으로 오히려 아니메쥬라는 만화 잡지를 기억하기 보다도 지브리라는 스튜디오를 더 기억하게 되는 매커니즘이 있다는 것을 알게 되었다. 
 
-![image](/assets/images/250726-1.jpeg) 
+요즘 통용되는 창업의 문법인가 싶었다.
+
+![image](/assets/images/250726-1.jpeg)
 
 ![image](/assets/images/250726-2.jpeg)
 
 ![image](/assets/images/250726-3.jpeg)
 
-대광사... 성남 아모른직다
-
 ![image](/assets/images/250726-4.jpeg)
-
-전세계 국룰. 의자에 눕기 (feat. 이집트 욤나)
 
 ![image](/assets/images/250726-5.jpeg)
 
@@ -25,11 +24,7 @@ tags: Diary
 
 ![image](/assets/images/250726-8.jpeg)
 
-아재.. 이름이 진짜 아재라서 놀림 많이 받았다.
-
 ![image](/assets/images/250726-9.jpeg)
-
-도산 서원 명판
 
 ![image](/assets/images/250726-10.jpeg)
 
@@ -39,17 +34,44 @@ tags: Diary
 
 ![image](/assets/images/250726-13.jpeg)
 
-도산서원핑, 개인 여행이라고 했으면 절대 안갔을 것 같은데 멱살잡고 끌고 가주니 나도 이런 것도 볼 수 있었다 헤헤
-
 ![image](/assets/images/250726-14.jpeg)
 
 ![image](/assets/images/250726-15.jpeg)
-
-자신을 속이는 것이 가장 어려워요 ... (퇴계 이황의 좌우명이라고 하던)
 
 ![image](/assets/images/250726-16.jpeg)
 
 ![image](/assets/images/250726-17.jpeg)
 
-생각도 못했던 안동 하회 탈춤의 연기는 진짜 소름이 돋았다. 한국의 한인지, 한국의 해학인지, 한국의 정인지, 한국의 가무인지 슴슴한 평양 냉면처럼 그렇게 심금을 울리더라. 비록 옛날것을 고수해서 그런지, 그것의 새로운 바람을 불러 일으킬 생각이 없어서 그런지, 젊은 사람들이 좋아할만한 혹은 역사를 계속 더 유지할만한 마케팅적인 요소가 없거나 내실이 없다고 생각되어서 (소 탈이 있었는데, 굉장히 중국제스러워서 안타까웠다... 하물며 조악하더라도 직접 만들었으면 어땠을까라는 생각. 오히려 처음에 나왔던 괴물 두 마리가 정말 조악해도 굉장히 한국적이라도 느꼈기 때문이다.)
+![image](/assets/images/250726-18.jpeg)
 
+![image](/assets/images/250726-19.jpeg)
+
+![image](/assets/images/250726-20.jpeg)
+
+![image](/assets/images/250726-21.jpeg)
+
+![image](/assets/images/250726-22.jpeg)
+
+![image](/assets/images/250726-23.jpeg)
+
+![image](/assets/images/250726-24.jpeg)
+
+![image](/assets/images/250726-25.jpeg)
+
+![image](/assets/images/250726-26.jpeg)
+
+![image](/assets/images/250726-27.jpeg)
+
+![image](/assets/images/250726-28.jpeg)
+
+![image](/assets/images/250726-29.jpeg)
+
+![image](/assets/images/250726-30.jpeg)
+
+![image](/assets/images/250726-31.jpeg)
+
+![image](/assets/images/250726-32.jpeg)
+
+![image](/assets/images/250726-33.jpeg)
+
+![image](/assets/images/250726-34.jpeg)
