--- a/_posts/2025-07-27-Diary.md
+++ b/_posts/2025-07-27-Diary.md
@@ -75,3 +75,5 @@ tags: Review Exhibition
 ![image](/assets/images/250726-33.jpeg)
 
 ![image](/assets/images/250726-34.jpeg)
+
+ㅈㅇ아 미안 허락도 없이 그냥 사진 올렸다.
