--- a/_posts/2025-07-13-Review.md
+++ b/_posts/2025-07-13-Review.md
@@ -19,8 +19,9 @@ tags: Diary
 
 독서토론동아리에서 받은 책들, 책도 열심히 읽는 한 해가 되어보자. 비록 책은 잘못 신청했지만 ㅠㅠ 당근마켓도 다시 열심히 활동하고 있다.
 
-![image](/assets/images/250714_6.jpeg)
+![image](/assets/images/250714_6.png)
 
++
 한국학중앙연구원의 외국인 친구들에게 성남을 가이드해주는 프로그램에 참석하였다. 뉴욕대학교를 졸업하여 이번에 스탠포드 대학원 입학 예정인 친구와 이야기를 하였는데, 본인은 남아프리카출신이기 때문에 부모님이 공부공부 이야기를 많이 하였고, 트럼프 정권이 들어선 이래 젠더와 사회에 관한 지원금이 줄어서 K-pop을 진심으로 연구하고 싶은 본인이 어려움에 직면했다는 이야기를 들었다. 본인은 공부공부에 그냥 꾸준히 한다는 말을 듣고나서, 엄청난 머리가 필요하다는 생각이 달라졌다. 공부에는 왕도가 없나보다. 요즘 공부를 안하고 있는 나 자신도 반성한 좋은 경험
 
 ![image](/assets/images/250714_7.jpeg)
