--- a/_posts/2025-08-09-Diary.md
+++ b/_posts/2025-08-09-Diary.md
@@ -5,20 +5,20 @@ tags: Diary
 
  어플리케이션 개발이라는 큰 미션이 주어지면서 (성남청년참여단 프로젝트), 그것을 일단 웹으로 구현하는 것과 벨류 체인을 구성하는 것이 급선무였다. 터무니 없는 금액으로 개발하는 개발사들과 다르게 시중에 나와있는 툴을 이용하여서 보여주는 것이 중요하였기 떄문에 진짜 MVP로 구성하였다. 추가 프로젝트 예산을 따오게 되면 flutter를 이용하여서 어플리케이션을 개발해보도록 해보자.
 
- #### 1. 아임웹 홈페이지 구성
+#### 1. 아임웹 홈페이지 구성
  아임웹을 통해서 구매 페이지라는 양식을 이용하여서 프로그램 수강신청을 구현하였다. 
 
  ![image](/assets/images/250809-01.png)
 
- #### 2. Google Works
+#### 2. Google Works
  Google Works를 통해서 사내 이메일을 만들었다. 마찬가지로 이메일을 명기할 수 있는 명함을 비즈하우스를 통해서 만들었다. 회사 안에서의 로얄티를 형성하는데에 본인의 이메일과 함께 본인의 명함과 같이 유형물이 상징적인 역할을 한다는 것을 알기에 
 
- ![image](/assets/images/250809-02.png)
+![image](/assets/images/250809-02.png)
 
- #### 3. Naver 스마트스토어 구매 연결
+#### 3. Naver 스마트스토어 구매 연결
   네이버 스마트스토어를 통해서 국가 예산을 개인에게 구매할 수 있도록 만들었다.
 
-   ![image](/assets/images/250809-03.png)
+![image](/assets/images/250809-03.png)
 
 ---
 
@@ -26,9 +26,9 @@ tags: Diary
 
 인스타그램에서 팔로우하고 있는 분이 간 어느 엑스포의 판매 물품 같았는데... 가고 싶었다.
 
- ![image](/assets/images/250809-06.jpeg)
- ![image](/assets/images/250809-07.jpeg)
- ![image](/assets/images/250809-08.jpeg)
+![image](/assets/images/250809-06.jpeg)
+![image](/assets/images/250809-07.jpeg)
+![image](/assets/images/250809-08.jpeg)
 
 강남 레드버튼 강남 시네마점, 컨셉에 확실하게 영화관이라는 컨셉에 맞게 공간을 꾸몄다. 나오는 음악도 그 시절의 올드팝을 틀어주었고, 음식도 팝콘까지 메가박스맛으로 착실하게 구현하였다.
 
@@ -43,9 +43,12 @@ tags: Diary
 
 마지막 게임으로 스플렌더로 머리 한번 더 핑핑 돌려주기
 
- ![image](/assets/images/250809-12.jpeg)
- ![image](/assets/images/250809-13.jpeg)
+![image](/assets/images/250809-12.jpeg)
 
- 비행기 시간 잘못 알고 있었다 ㅋㅋㅋ 도착시간이랑 출발시간이랑 헷갈렸다. 얼핏 오전 12시가 생각났는데, 마지막으로 자기 전에 구체적으로 몇 시인지 확인하려고 했었는데 오전 9시 비행기였고, 그래서 부랴부랴 공항 버스 새벽 2시 예약을 하려고 했는데, 예약도 20분 전에는 못한다고 해서 냅다 캐리어 들고 출발해버렸다. 기사님의 도움으로 예약까지 잘 할 수 있었고, 공항 노숙으로 출발하는 비즈니스 출장은 퍽 걱정이 된다. (마우스도, 돼지코도 못 챙기고 왔다...)
+ 비행기 시간 잘못 알고 있었다 ㅋㅋㅋ 도착시간이랑 출발시간이랑 헷갈렸다. 얼핏 오전 12시가 생각났는데, 마지막으로 자기 전에 구체적으로 몇 시인지 확인하려고 했었는데 오전 9시 비행기였고, 그래서 부랴부랴 공항 버스 새벽 2시 예약을 하려고 했는데, 예약도 20분 전에는 못한다고 해서 냅다 캐리어 들고 출발해버렸다. 
+  
+![image](/assets/images/250809-13.jpeg)
+
+ 기사님의 도움으로 예약까지 잘 할 수 있었고, 공항 노숙으로 출발하는 비즈니스 출장은 퍽 걱정이 된다. (마우스도, 돼지코도 못 챙기고 왔다...)
 
  현재 시간 8월 10일 새벽 4시 35분
