--- a/_posts/2025-08-07-Review.md
+++ b/_posts/2025-08-07-Review.md
@@ -6,28 +6,28 @@ tags: Review Book
  안톤 체호프는 19세기 말에서 20세기 초 활동했던 러시아의 극작가, 소설가이며 의사다. 그는 가난한 집안 환경 때문에 가정이 몰락하고 나서도 학업에 전념하였고, 그는 타간로크 중등학교 시절부터 탁월한 학업 성적을 유지하여 모스크바대학교 의과대학에 입학할 수 있었고, (이 당시 의대 입학은 매우 어려운 일이었음), 밤에는 잡지에 글을 기고하고, 낮에는 수업을 듣는 생활을 수년간 계속하여서 생계를 유지한다. 표도르 도스토옙스키와 레프 톨스토이로 절정을 이루었던 19세기 러시아 문학 황금시대의 마지막을 장식한 대문호로 꼽힌다. 러시아에서는 체호프를 밝고 극적인 것보다는 희미하고 조용한 감정, 즉 황혼처럼 애매하고 침묵에 가까운 정서를 가지고 있기 때문에 황혼의 작가라는 별명으로 불린다. 체호프는 단편 다작으로 유명한데, 1886년 한해만 116편의 단편을 썼고, 1887년에는 69편을 썼다. 민음사 엮은이는 그의 진지한 80여 편의 작품들을 하나하나 개성이 있지만, 그의 단편 소설인 <<개를 데리고 다니는 부인>>, <<벚꽃 동산>>, <<6호실>>도 있지만 민음사에서는 한국에서 번역되지 않은 작품들을 대상으로 삼는 기준으로 여러 작품을 소개하여서 읽게 되었다.
  체호프 단편선을 통해서 각 단편에서 드러나는 케릭터, 장치와 서사 진행 방식에 관해서 난도질을 독서토론 동아리에서 해보았고, 아래가 독서토론 동아리에서의 발제문이었다.
 
-### 관리의 죽음, 죽음만이 가장 철학적인 선택입니까?
+##### 관리의 죽음, 죽음만이 가장 철학적인 선택입니까?
  체르뱌코프는 재채기를 했을 때 침이 브리잘로프 장군에게 튀었다. 그가 그렇게 머쓱한 이유는 무엇을까?  이를 통해서 체호프가 이야기하고 싶었던 것을 무엇이었을까? 체호프가 그를 죽인 이유는 무엇일까? 단편에 관한 본인의 생각에 관해서 자유롭게 말해보자. (영화 서브스턴스가 생각나기도…) 그의 소설 전개 방식에 관한 특징적인 것들에 관해서 이야기를 해보자
 
 서브스턴스짤은 너굴맨이 처리했으니 안심하라구!
 
-### 공포, 당신은 당신의 이웃을 사랑하십니까?
+##### 공포, 당신은 당신의 이웃을 사랑하십니까?
  나는 친구 드미트리 페트로비치 실린의 아내를 사모한다. 왜 40명의 순교자라고 이름을 붙였을까? 왜 영혼이 없는 것들에 관해서 회의적인었던 드미트로 페트로비치는 유령을 보게 된 것일까? p30 아까 강에서 보았던 그 키 크고 홀쭉한 망령들이 나무와 덤불 사이를 배회하며 그들을 감싸고 있었다. 디르과 이야기할 수 없다는 건 얼마나 안타까운 일인가! 그가 갑자기 떠난 이유는 무엇일까? 또 40인의 순교자는 어떠한 역할을 하였을까? 장치와 인물에 관해서 이야기를 해보자
 (인사이드 아웃 불안이 연결)
 
-### 베짱이가 되고 싶습니까?
+##### 베짱이가 되고 싶습니까?
 베짱이가 되고 싶어요. 그러니깐 잠깐 휴식하고 다시 토론 시작합시다. (10분)
 
-### 드라마에서 나온 파벨 바실리치는 게이입니까? 착한 아이입니까? 분조장입니까? 
+##### 드라마에서 나온 파벨 바실리치는 게이입니까? 착한 아이입니까? 분조장입니까? 
  소설가 파벨 바실리치는 그의 열렬한 팬, 모라슈키나를 만나 그녀의 희곡 작품에 관해서 듣는다. 그는 오랜 그녀의 희곡 작품에 권태를 느끼다가 결국에 그녀를 죽이는데, 결국 그는 배심원을 통해서 무죄를 선고받는다. 파벨 바실리치는 게이일까? 아니면 착한 아이였을까? 이토록 파벨 바실리치는 본인이 싫어하는 것을 싫어하는데, 본인은 어떠한 문학/영화 작품을 좋아하나요? 최근에 보고 있는 것은 무엇인가요?
 
-### 미녀 
+##### 미녀 
  여미새 나의 아쉬웠던 두 여인에 관한 갈망. 그는 왜 그렇게 그녀들을 평가했을까? 그는 그녀들의 구원자로 생각한 것일까? 그는 어떠한 열망에 의한 투사로 그녀들을 바라봤을까?
 
-### 거울
+##### 거울
  넬리는 왜 그런 꿈을 꾸었을까? 넬리를 살아숨쉬게 하는 것은 그녀의 남편이고, 주체적으로 살게 만들어주는 것은 오직 결혼이었을까? 
 
-### 내기
+##### 내기
  늙은 은행가와 젊은 변호사과의 언쟁을 통해서 변호사는 15년간 감옥게 갖히는 것을 수락하게 되고 15년 하루가 되기 전에 탈옥하게 되는데…, 변호사가 텍스트를 통해서 보게 된 것은 무엇일까? 글로 배운 연애와 비슷한 것이 아니었을까? 젊은 변호사는 어디로? 왜? 어떻게? 도망을 갔을까?
 
  > p194.  특별히 놀라운 사건을 도입하기보다는 지극히 일상적인 설정 속에서 이야기가 전개된다는 점, 사건이 있더라도 그 자체의 외부적인 측면보다는 사건을 받아들이는 인간의 다양하고 모순된 반응에 주목한다는 점, 대체로 매우 느슨한 플롯인 데다가 그 결말이 미결정의 상태로 끝나고 주인공들도 이에 대해 어리둥절하고 모호한 태도를 취한다는 점, 등장인물들 간의 의사소통의 단절 등 여기서 이루 다 열거할 수는 없지만, 이런 체호프의 특징들은 현대 단편 소설의 출현을 예고하는 핵심적인 징후들이기도 하다. 그러나 대작가로서의 체호프를 무엇보다도 돋보이게 만드는 것은 이야기꾼으로서의 순수한 재능일 터이다. 체호프의 단편 소설 속에는 실로 다양한 환경 속의 다양한 인간들이 살아 숨쉬고 있다. (중략) ‘그 누구도 체호프처럼 장소와 정경과 인물 간의 대화를 생생하게 느끼게 하는 재능을 가지지 못했다.’고 술회한 바 있다.
