--- a/_posts/2025-08-09-Diary.md
+++ b/_posts/2025-08-09-Diary.md
@@ -3,31 +3,61 @@ title: 비즈니스 셋업과 비즈니스 출장
 tags: Diary
 ---
 
-어플리케이션 개발이라는 큰 미션이 주어지면서 (성남청년참여단 프로젝트), 그것을 일단 웹으로 구현하는 것과 벨류 체인을 구성하는 것이 급선무였다. 터무니 없는 금액으로 개발하는 개발사들과 다르게 시중에 나와있는 툴을 이용하여서 보여주는 것이 중요하였기 떄문에 진짜 MVP로 구성하였다. 추가 프로젝트 예산을 따오게 되면 flutter를 이용하여서 어플리케이션을 개발해보도록 해보자.
+어플리케이션 개발이라는 큰 미션이 주어지면서 (성남청년참여단 프로젝트), 그것을 일단 웹으로 구현하는 것과 벨류 체인을 구성하는 것이 급선무였다. 터무니 없는 금액으로 개발하는 개발사들과 다르게 시중에 나와있는 툴을 이용하여서 보여주는 것이 중요하였기 떄문에 진짜 MVP로 구성하였다. 추가 프로젝트 예산을 따오게 되면 Flutter를 이용하여서 어플리케이션을 개발해보도록 해보자.
 
-#### 1. 아임웹 홈페이지 구성
+##### 1. 아임웹 홈페이지 구성
 
 아임웹을 통해서 구매 페이지라는 양식을 이용하여서 프로그램 수강신청을 구현하였다. 
 
  ![image](/assets/images/250809-01.png)
 
-#### 2. Google Works
+##### 2. Google Works
 
 Google Works를 통해서 사내 이메일을 만들었다. 마찬가지로 이메일을 명기할 수 있는 명함을 비즈하우스를 통해서 만들었다. 회사 안에서의 로얄티를 형성하는데에 본인의 이메일과 함께 본인의 명함과 같이 유형물이 상징적인 역할을 한다는 것을 알기에 
 
 ![image](/assets/images/250809-02.png)
+![image](/assets/images/250809-03.png)
 
-#### 3. Naver 스마트스토어 구매 연결
+##### 3. Naver 스마트스토어 구매 연결
 
 네이버 스마트스토어를 통해서 국가 예산을 개인에게 구매할 수 있도록 만들었다.
 
-![image](/assets/images/250809-03.png)
-
 ---
+
+![image](/assets/images/250809_여권사진.jpeg)
+
+국제 운전 면허증을 만들기 위해서는 여권 사진을 찍었어야 했는데, 영 사진 앞에 서는 것은 아직도 어색하다.
+
+웃으면서 찍자 -> 왜 이렇게 바보 같아 보이지 웃지 말자
+
+너무 짝눈인데 -> 눈 크게 뜨자
+
+눈 너무 부릅 떴네 -> 기회 세 번 날림
+
+![image](/assets/images/250809_국제운전.jpeg)
+
+그렇게 얻은 결과물. 조금 화난 것 같다.
+
 
 ![image](/assets/images/250809-04.jpeg)
 
 인스타그램에서 팔로우하고 있는 분이 간 어느 엑스포의 판매 물품 같았는데... 가고 싶었다.
+
+
+토요일에 방탈출카페 루나 던전에 있는 3일 컨셉을 클리어하고 
+
+![image](/assets/images/250809_태양곱창.jpeg)
+
+논현 태양곱창 낮술을 시작으로 
+
+![image](/assets/images/250809_애플.jpeg)
+
+
+애플에 가서 직원이 갑자기 무엇을 알려준다고 해서 AI툴을 여러 개 알려주더니 우리가 한 것이라고는 잡티 지우는 것밖에 없었다.
+
+![image](/assets/images/250809_맥북.jpeg)
+
+맥북은 저렇게 체험해야 하는건가보네요
 
 ![image](/assets/images/250809-06.jpeg)
 ![image](/assets/images/250809-07.jpeg)
