--- a/_posts/2025-08-03-Diary.md
+++ b/_posts/2025-08-03-Diary.md
@@ -13,7 +13,7 @@ tags: Diary
 
 ![image](/assets/images/250803-3.jpeg)
 
-보령에서 뼈짬뽕 먹기, 오른쪽 위에 건담 사자비를 올려놓은 이유는 대체 무엇인가요 
+보령에서 뼈짬뽕 먹기, 왼쪽 위에 건담 사자비를 올려놓은 이유는 대체 무엇인가요 
 
 ![image](/assets/images/250803-4.jpeg)
 
