--- a/_posts/2025-08-07-Review.md
+++ b/_posts/2025-08-07-Review.md
@@ -3,6 +3,8 @@ title: 체호프 단편선
 tags: Review Book
 ---
 
+ ![image](/assets/images/250807_책.jpeg)
+
  안톤 체호프는 19세기 말에서 20세기 초 활동했던 러시아의 극작가, 소설가이며 의사다. 그는 가난한 집안 환경 때문에 가정이 몰락하고 나서도 학업에 전념하였고, 그는 타간로크 중등학교 시절부터 탁월한 학업 성적을 유지하여 모스크바대학교 의과대학에 입학할 수 있었고, (이 당시 의대 입학은 매우 어려운 일이었음), 밤에는 잡지에 글을 기고하고, 낮에는 수업을 듣는 생활을 수년간 계속하여서 생계를 유지한다. 표도르 도스토옙스키와 레프 톨스토이로 절정을 이루었던 19세기 러시아 문학 황금시대의 마지막을 장식한 대문호로 꼽힌다. 러시아에서는 체호프를 밝고 극적인 것보다는 희미하고 조용한 감정, 즉 황혼처럼 애매하고 침묵에 가까운 정서를 가지고 있기 때문에 황혼의 작가라는 별명으로 불린다. 체호프는 단편 다작으로 유명한데, 1886년 한해만 116편의 단편을 썼고, 1887년에는 69편을 썼다. 민음사 엮은이는 그의 진지한 80여 편의 작품들을 하나하나 개성이 있지만, 그의 단편 소설인 <<개를 데리고 다니는 부인>>, <<벚꽃 동산>>, <<6호실>>도 있지만 민음사에서는 한국에서 번역되지 않은 작품들을 대상으로 삼는 기준으로 여러 작품을 소개하여서 읽게 되었다.
  체호프 단편선을 통해서 각 단편에서 드러나는 케릭터, 장치와 서사 진행 방식에 관해서 난도질을 독서토론 동아리에서 해보았고, 아래가 독서토론 동아리에서의 발제문이었다.
 
