--- a/_posts/2025-09-20-Diary.md
+++ b/_posts/2025-09-20-Diary.md
@@ -3,8 +3,15 @@ title: 공간 분석
 tags: Diary
 ---
 
+![image](/assets/images/250921_조명.jpeg)
+
 호주의 Holiday Inn 에서 숙소를 맺었는데, 여기 조명이 아르떼미떼여서 재밌다 ㅋㅋㅋㅋ 색온도도 적당하고 내가 모르지만 침대랑 가구들도 엄청 비싼 거 아닐까라는 생각 때문에 다 사진으로 담았다. 전체 vivid한 컬러를 담았고, 전체적으로 미국보다는 조명이 많고 밝다.
 
+![image](/assets/images/250921_침대.jpeg)
+
 배게를 잘 보면 soft랑 firm 이라고 적힌 것도 나름 유머, 또 그렇게 배치한 것도 대접 받는 기분이다.
+
+![image](/assets/images/250921_전체.jpeg)
+![image](/assets/images/250921_협탁.jpeg)
 
 협탁 아래에 턱이 하나 더 있어서 다른 물건을 또 놓기에도 좋았다.
