--- a/_posts/2025-09-20-Review.md
+++ b/_posts/2025-09-20-Review.md
@@ -5,3 +5,5 @@ tags: Review Movie
 ![image](/assets/images/250921_해피엔드.png)
 
 비행기에서 최근에 올라온 영화로 있길래 냉큼 봤다. 소년의 시간이랑 미지의 서울도 봐야하는데, 하나에 요즘 통 집중을 못한다.
+
+![image](/assets/images/250915_비행기안.jpeg)
