--- a/_posts/2025-09-23-Diary.md
+++ b/_posts/2025-09-23-Diary.md
@@ -1,5 +1,5 @@
 ---
-title: 개미
+title: 개미 만화 시작
 tags: Diary
 ---
 
@@ -12,8 +12,10 @@ tags: Diary
 그래서 태어난 개미 만화
 앞으로 꾸준히 그려보자 
 
-1. 좋은 콘텐츠를 읽은 것을 바탕으로 
+1. 좋은 콘텐츠(영화, 책, 광고, 경험 등)를 바탕으로 
 2. 에술적으로 4컷
 3. 기승전결을 담을 것
+
+아이폰 메모장에다가 메모 -> 그림 그리기 -> 메모한 것 복붙으로 작업되어서 만들어진다.
 
 ![image](/assets/images/250923_개미.png) 
