--- a/_posts/2025-09-23-Diary.md
+++ b/_posts/2025-09-23-Diary.md
@@ -7,15 +7,17 @@ tags: Diary
 
 1. 기왕 웃길 것이면 확실하게 웃겨야 한다.
 2. 또라이 컨셉도 지속적이면 케릭터가 된다.
-3. 그러면서 의미를 가져가자 (예술적이든 기술적이든)
+3. 그러면서 의미를 가져가자 (예술적이든 시사적이든)
 
 그래서 태어난 개미 만화
 앞으로 꾸준히 그려보자 
 
 1. 좋은 콘텐츠(영화, 책, 광고, 경험 등)를 바탕으로 
-2. 에술적으로 4컷
-3. 기승전결을 담을 것
+2. 4컷
+3. 기승전결을 담을 것 (느낀 바, 다른 것이랑 비교한 바 등)
 
 아이폰 메모장에다가 메모 -> 그림 그리기 -> 메모한 것 복붙으로 작업되어서 만들어진다.
+
+블로그도 좀 2~3일에 하나로 올리자리
 
 ![image](/assets/images/250923_개미.png) 
