--- a/_posts/2025-09-24-Diary.md
+++ b/_posts/2025-09-24-Diary.md
@@ -4,19 +4,19 @@ tags: Diary
 ---
 ![image](/assets/images/250924_아이오닉.jpeg)
 
-호주 판매법인은 차종의 이름이랑 차량 번호랑 동일하게 만든다. 아이오닉5 차량의 아이오닉 번호판 ㅎㅎ 
+호주 판매법인은 차종의 이름이랑 차량 번호랑 동일하게 만든다. 아이오닉5 차량의 아이오닉 번호판
 
 ![image](/assets/images/250924_점심.jpeg)
 
-기아 구내 식당이랑 현대 구내 식당이랑 비교를 하면 현대 구내 식당이 정말 맛있었다. 아르헨티나에서도 동일하게 느낀 것인데, 소고기에 감자튀김을 주던데, 여기도 감자 튀김을 산처럼 준다? 고마워요
+호주 기아 구내 식당이랑 호주 현대 구내 식당이랑 비교를 하면 현대 구내 식당이 정말 맛있었다. 아르헨티나에서도 동일하게 느낀 것인데, 소고기에 감자튀김을 주던데, 여기도 감자 튀김을 산처럼 준다? 고마워요
 
 ![image](/assets/images/250924_하늘.jpeg)
 
-호주의 색은 vivid 하다는 말이 딱이다.
+호주의 펄스널 컬러는 여름 웜톤 vivid하다
 
 ![image](/assets/images/250924_건물.jpeg)
 
-건물도 이렇게 화려해도 되는 것인지 
+건물도 이렇게 화려해도 되는 것인지 인지부조화
 
 ![image](/assets/images/250924_워크숍.jpeg)
 
@@ -25,7 +25,7 @@ tags: Diary
 ![image](/assets/images/250924_라멘집.jpeg)
 ![image](/assets/images/250924_라멘.jpeg)
 
-일 끝나고 시드니 시내에서 먹은 멘쇼오 라멘 진해서 좋았다.
+일 끝나고 시드니 시내에서 먹은 멘쇼 라멘. 진하다.
 
 ![image](/assets/images/250924_도로.jpeg) 
 마지막은 영화 멜랑꼴리였나 거기랑 비슷해서 찍었다.
