--- a/_posts/2025-09-23-Diary.md
+++ b/_posts/2025-09-23-Diary.md
@@ -1,8 +1,9 @@
 ---
-title: 개미 만화 시작
+title: 개미 만화
 tags: Diary
 ---
 
+![image](/assets/images/250923_개미.png) 
 인스타그램에 개미라는 스토리 모음이 있는데 
 
 1. 기왕 웃길 것이면 확실하게 웃겨야 한다.
@@ -12,12 +13,10 @@ tags: Diary
 그래서 태어난 개미 만화
 앞으로 꾸준히 그려보자 
 
-1. 좋은 콘텐츠(영화, 책, 광고, 경험 등)를 바탕으로 
-2. 4컷
-3. 기승전결을 담을 것 (느낀 바, 다른 것이랑 비교한 바 등)
+좋은 콘텐츠(영화, 책, 광고, 경험 등)를 바탕으로 
+기승전결을 담을 것 (느낀 바, 다른 것이랑 비교한 바 등)
+4컷 (너무 진지하지 않고 웃기게)
 
 아이폰 메모장에다가 메모 -> 그림 그리기 -> 메모한 것 복붙으로 작업되어서 만들어진다.
 
 블로그도 좀 2~3일에 하나로 올리자리
-
-![image](/assets/images/250923_개미.png) 
