--- a/_posts/2025-09-12-Review.md
+++ b/_posts/2025-09-12-Review.md
@@ -7,14 +7,14 @@ tags: Review Theater
 
 맥베스를 현대적으로 재해석한 작품, 인물 관계를 명확하게 그리기 위해서 보여줬던 시퀀스가 있는데, 비산 돈을 준만큼 그래도 내가 보고 싶은 것들을 온전히 볼 수 이씅면 좋으련만 그것을 불가능해서 안타까웠다.
 
-#### 인간의 카메라, 객체화
+##### 인간의 카메라, 객체화
  슬립노모어에서는 인간을 카메라로 전락시켜버린다. 자본주의의 끝이라고 불러질 수 있는 관객 참여형 연극을 지향하는데, 그 관객들도 하나의 연극자로서 초대를 하고, 관람자가 그것을 보게 한다. 철저히 카메라로 전락한 살마들은 다른 카레마를 보면서, 또 
 
 
-#### 반복보다는 변주
+##### 반복보다는 변주
   슬립노모어에서는 그것을 이해하기 좋게 여러 번 반복된다고 설정이 되어 있었는데, 미묘하게 변화하는 것이었다. 반복된다는 말보다는 조금씩 변주되고 변화하는 것을 알아채야 한다.
 
-#### 이스터에그
+##### 이스터에그
  여자친구는 서사를 따라가는 것이 아니라 공간에 집중을 하였는데, 공간 하나하나 있는 이스터에그와 그것을 면밀하게 바라보는, 그러니깐 완전히 연출자가 의도한 그대로 연극을 바라보기보다는 또 다르게 연극을 바라보는 것을 의도했을텐데 그러한 끝판을 본 것 같아서 좋았다. 이멀시브 연극이라는 것이 상호 액티브한 연극이 아니라고 명명했던 이유는 여기서 드러났던 것 같다.
 
 ---
