--- a/_posts/2025-09-24-Diary.md
+++ b/_posts/2025-09-24-Diary.md
@@ -12,7 +12,7 @@ tags: Diary
 
 ![image](/assets/images/250924_하늘.jpeg)
 
-호주의 펄스널 컬러는 여름 웜톤 vivid하다
+호주의 펄스널 컬러는 여름 무슨톤 vivid하다
 
 ![image](/assets/images/250924_건물.jpeg)
 
@@ -20,14 +20,14 @@ tags: Diary
 
 ![image](/assets/images/250924_워크숍.jpeg)
 
-안에 코스트 공장과 같은 곳에서 일을 해도 즐겁다.
+안에 코스트 공장과 같은 곳에서 일을 해도 즐겁다
 
 ![image](/assets/images/250924_라멘집.jpeg)
 ![image](/assets/images/250924_라멘.jpeg)
 
-일 끝나고 시드니 시내에서 먹은 멘쇼 라멘. 진하다.
+일 끝나고 시드니 시내에서 먹은 멘쇼 라멘 진하다
 
 ![image](/assets/images/250924_도로.jpeg) 
-마지막은 영화 멜랑꼴리였나 거기랑 비슷해서 찍었다.
+마지막은 영화 멜랑꼴리였나 거기랑 비슷해서 찍었다
 
-시드니는 나중에 편안한 마음으로 꼭 와도 좋겠다.
+시드니는 나중에 편안한 마음으로 꼭 와도 좋겠다
