--- a/_posts/2025-09-25-Diary.md
+++ b/_posts/2025-09-25-Diary.md
@@ -7,6 +7,8 @@ tags: Diary
 
 뭔가 직장인처럼 만든 배경화면
 
+![image](/assets/images/250925_배경화면2.jpeg)
+
 호주 Apple Store에서 본 이모지로 배경화면을 본 것에서 감명을 받아서 기본으로 있는 배경화면 업그레이드
 
 ![image](/assets/images/250925_건물.jpeg)
