--- a/_posts/2025-09-25-Diary.md
+++ b/_posts/2025-09-25-Diary.md
@@ -9,7 +9,7 @@ tags: Diary
 
 ![image](/assets/images/250925_배경화면2.jpeg)
 
-호주 Apple Store에서 본 이모지로 배경화면을 본 것에서 감명을 받아서 기본으로 있는 배경화면 업그레이드
+호주 Apple Store에서 본 iPhone 17 pro 이모지 배경화면을 본 것에서 감명을 받아서 기본으로 있는 배경화면 업데이트
 
 ![image](/assets/images/250925_건물.jpeg)
 ![image](/assets/images/250925_벽.jpeg)
