--- a/_posts/2025-10-10-Review.md
+++ b/_posts/2025-10-10-Review.md
@@ -1,6 +1,6 @@
 ---
-title: 넷플릭스 태어난 김에 세계일주
-tags: Review Netflix
+title: 어쩔수가없다
+tags: Review Movie
 ---
 
 ![image](/assets/images/251010_어쩔수가없다.png)
