--- a/_posts/2025-10-07-Review.md
+++ b/_posts/2025-10-07-Review.md
@@ -6,3 +6,5 @@ tags: Review
 ![image](/assets/images/251008_미지의서울.png)
 
 유튜버 천재 이승국의 컨텐츠 추천은 무작정 신뢰하는 편인데, 인스타그램에서 왓챠피디아 에디터분들도 미지의 서울을 올해 상반기 컨텐츠 상위로 분류하길래 봤는데 정말 좋았다리
+
+<div>{%- include extensions/youtube.html id='n2lMaBh0pYY' -%}</div>
