--- a/_posts/2025-10-08-Review.md
+++ b/_posts/2025-10-08-Review.md
@@ -1,8 +1,8 @@
 ---
-title: 넷플릭스 태어난 김에 세계일주
+title: 넷플릭스 태어난김에 세계일주
 tags: Review Netflix
 ---
 
 ![image](/assets/images/251007_태어난김에세계일주.png)
 
-비행기 안에서 넷플릭스도 저장을 못하고, 책도 저장을 못하고, 노트북 배터리도 없는 상황에서 비행기 자체 프로그램만 봤어야 하는 상황이었는데, 최근에 못보고 있었던 여행 관련 프로그램이어서 공감이 많이 된다. 남미를 투어한 것도 그렇고, 세계의 종말을 대처하는 캐롤라인이었나 넷플릭스에서도 사람들이 종말에 다가오니 티베트에 간다는 말을 봤는데, 그렇게 내게 신비로 있었던 네팔, 티베트의 차마고도에 관해서 참을 수 없는 존재의 가벼움으로 보여준 티베트의 모습은 정말 좋았다.
+출장 후, 출국하기 전에 넷플릭스 오프라인 저장도 못하고, 책도 저장을 못하고, 노트북 배터리도 없는 상황에서 비행기 자체 프로그램만 봤어야 하는 상황이었는데, 최근에 못보고 있었던 여행 관련 프로그램이어서 공감이 많이 되었다. 시즌2에서인가 남미를 투어한 것도 그렇고, 세계의 종말을 대처하는 캐롤라인 넷플릭스 애니메이션에서도 사람들이 종말에 다가오니 티베트에 간다는 말을 봤는데, 그렇게 내게 신비로 있었던 티베트의 차마고도에 관해서 참을 수 없는 존재의 가벼움으로 보여준 모습은 정말 좋았다.
