--- a/_posts/2025-09-12-Review.md
+++ b/_posts/2025-09-12-Review.md
@@ -15,7 +15,7 @@ tags: Review Theater
   슬립노모어에서는 그것을 이해하기 좋게 여러 번 반복된다고 설정이 되어 있었는데, 미묘하게 변화하는 것이었다. 반복된다는 말보다는 조금씩 변주되고 변화하는 것을 알아채야 한다.
 
 ##### 이스터에그
- 여자친구는 서사를 따라가는 것이 아니라 공간에 집중을 하였는데, 공간 하나하나 있는 이스터에그와 그것을 면밀하게 바라보는, 그러니깐 완전히 연출자가 의도한 그대로 연극을 바라보기보다는 또 다르게 연극을 바라보는 것을 의도했을텐데 그러한 끝판을 본 것 같아서 좋았다. 이멀시브 연극이라는 것이 상호 액티브한 연극이 아니라고 명명했던 이유는 여기서 드러났던 것 같다.
+ 그러니깐 완전히 연출자가 의도한 그대로 연극을 바라보기보다는 또 다르게 연극을 바라보는 것을 의도했을텐데 그러한 끝판을 본 것 같아서 좋았다. 이멀시브 연극이라는 것이 상호 액티브한 연극이 아니라고 명명했던 이유는 여기서 드러났던 것 같다.
 
 ---
 
