--- a/_posts/2025-11-02-Review.md
+++ b/_posts/2025-11-02-Review.md
@@ -3,6 +3,9 @@ title: 이방인
 tags: Review Book
 ---
 
+![image](/assets/images/251102_독서모임1.jpeg)
+![image](/assets/images/251102_독서모임2.jpeg)
+
 알베르 카뮈의 이방인
 
 엄마의 장례식에도 울지 않는 뫼르소는 친국들과 함께 해변으로 놀러가게 되는데 거기서 만난 여러 폭풍에서 결국 아랍을 다섯 발의 총으로 쏴서 죽이게 된다. 그의 반인륜적인 행동을 비판하게 된다.
@@ -14,3 +17,5 @@ tags: Review Book
 이방인은 결국에 주인공 뫼르소였고 끊임없이 그랑 비교하는 여러 인물들을 나열하면서 보여주게 되는데, 그 모습이 뫼르소의 비정상적인 모습을 더 보여주었다. 삶에서 초연하다고 보여주는 뫼르소의 모습을 보면서 당신은 어떠한 삶의 목적을 가지고 있지? 강철의 연금술사에서 인간의 어떠한 궁극적인 이상향을 물어보는 것에 관한 경종을 울려주었던 책이라고 생각한다.
 
 인류가 연대하고 협력하고 공감하는 것들에 관한 의미를 보여준 책. 그렇기 때문에 너의 것을 하는 것 이상으로 남의 것을 하는 것이 중요하다 반대편으로는 반대의 사르트르의 책도 읽어보는 것이 좋을 것이라근 생각 (왜냐하면 사르트르는 계속 카뮈를 깠으니깐)
+
+<div>{%- include extensions/youtube.html id='homZR42hfMQ' -%}</div>
