--- a/_posts/2025-05-24-Review.md
+++ b/_posts/2025-05-24-Review.md
@@ -3,7 +3,7 @@ title: 캐인스 - 포스트맨은 벨을 두 번 울린다
 tags: Review Book
 ---
 
-![iamge](/assets/images/카페포스트맨은종을두번울린다.jpeg)
+![iamge](/assets/images/250524_카페포스트맨은종을두번울린다.jpeg)
 
 > 프랭크는 선술집에 들어가서 음식을 먹는데, 거기 있는 그리스인 닉의 아내 코라를 탐닉한다. 그를 죽이려고 한번 시도했는데, 그 시도는 물거품으로 돌아가고, 다음에 그들은 다시 닉을 성공적으로 죽이지만, 보험을 가입하고, 자동차에서 죽였을 때 코라가 핸드백을 가지고 크게 다치지 않은 모습을 통해서 걱ㅁ사 새킷은 의심하게 된다. 그 의심을 해결해주느라 카츠는 무리한 금액을 요구한다. 그렇게 잘 살고 있을 무렵 비밀을 알고 있는 카츠의 하수인 케네디가 와서 협박을 하고, 그렇게 그들은 케네디를 처리하고, 나중에 코라가 임신한 것을 알게 된다. 하지만 운전의 잘못으로 인하여서 코라를 죽이게 되고, 결국 프랭크도 교수형에 취하게 되는데
 
@@ -15,4 +15,4 @@ tags: Review Book
 
 4. 지나치게 미국적인 소설이어서 각 욕망을 실현하고 발현하는 것들에서 적나라하게 보여주었고, 또 사랑이라는 의미에서 박찬욱 감독의 헤어질 결심이랑 비슷하여서 논제로 넣었다.
 
-![image](/assets/images/문래밥집.jpeg)
+![image](/assets/images/250524_문래밥집.jpeg)
