--- a/_posts/2025-06-07-Review.md
+++ b/_posts/2025-06-07-Review.md
@@ -3,6 +3,6 @@ title: 추락의 해부
 tags: Review Movie
 ---
 
-![image](/assets/images/25060601.jpeg)
+![image](/assets/images/250606_01.jpeg)
 
 영화 자체의 공간이 작은 것을 선호한다. 그렇다보면 배우의 연기력과 내용에 몰빵을 하게 되는데, 이번 추락의 해부는 너무너무 그러한 좋아하는 요소를 다 맞추어서 좋았다. 짧은 소설을 밀도 있게 표현하는 영화 자체에대한 선호와 함께 평소 유튜브 BANA TV (이센스가 소속되어 있는 소속사)의 영상에 관해서 굉장히 좋아하고 있었는데 (음성만으로 나래이션을 넣어서 영상을 나중에 변화를 주면서 자연스럽게 여운을 준다든지..) 정말 영화는 종합 예술이구나! 라는 것을 여실히 느끼게 해준 좋은 영화였다. 평소에 극찬이 있길래 극장에서 봤어야 했는데 그러지 못했던 영화였는데 일요 시네마 영화로 선정되어서 너무 좋았다.
