--- a/_posts/2025-06-14-Diary.md
+++ b/_posts/2025-06-14-Diary.md
@@ -3,7 +3,7 @@ title: 개인 경계 세우기
 tags: Diary
 ---
 
-![image](/assets/images/25061401.jpeg)
+![image](/assets/images/250614_01.jpeg)
 
 1. 경기도청년참여기구 정책 공론장에 참여를 하였고, 독서동아리지원센터에 선정되었다. 주말에는 나를 위한 시간을 마련할 것, 그럼에도 불구하고 평일에는 최대한 열심히 살아서 꽉꽉 채울 것. 인생 라이프 타임의 궤도가 어느정도 올라왔다는 생각이 든다.
 
@@ -14,6 +14,6 @@ tags: Diary
 
 4. 14일 롱블랙 무료 체험이 떠서 구독을 하여 예민한 사람에 관한 아티클을 읽었다. 회사 업무 해결 외에 관계 유지에 관해서는 따로 신경을 안쓰는 사람들, 본인 외에 다른 사람들 프레임을 씌우고 으레 짐작하는 사람들, 그냥 내 스스로 판단하는 것도 많이 힘들었는데, 이번에 예민한 사람들에 관한 나의 경계를 명확하게 세우고, 정중하고 예의있게 말하는 연습을 하자
 
-![image](/assets/images/25061402.png)
-![image](/assets/images/25061403.png)
-![image](/assets/images/25061404.png)
+![image](/assets/images/250614_02.jpeg)
+![image](/assets/images/250614_03.png)
+![image](/assets/images/250614_04.png)
