--- a/_posts/2025-11-30-Diary.md
+++ b/_posts/2025-11-30-Diary.md
@@ -1,7 +1,10 @@
 ---
-title: 미메시스 미술관
+title: 미메시스 아트 뮤지엄
 tags: Diary
 ---
+
+열린책방 출판사에서 운영하고 있는 아트 뮤지엄
+하여간 멋진 것들은 책 많이 읽는 사람들이 다 한다.
 
 ![image](/assets/images/251130_01.jpeg)
 ![image](/assets/images/251130_02.jpeg)
@@ -24,3 +27,5 @@ tags: Diary
 ![image](/assets/images/251130_19.jpeg)
 ![image](/assets/images/251130_20.jpeg)
 ![image](/assets/images/251130_21.jpeg)
+
+앞으로 헌책방에서 일러스트를 모아서 내 만화의 퀄리티를 높이겠어 (다짐)
