--- a/_posts/2025-11-15-Diary.md
+++ b/_posts/2025-11-15-Diary.md
@@ -4,6 +4,7 @@ tags: Diary
 ---
 
 ![image](/assets/images/251115_01.jpeg)
+![image](/assets/images/251115_02.jpeg)
 ![image](/assets/images/251115_03.jpeg)
 ![image](/assets/images/251115_04.jpeg)
 ![image](/assets/images/251115_05.jpeg)
