--- a/_posts/2025-11-20-Diary2.md
+++ b/_posts/2025-11-20-Diary2.md
@@ -19,7 +19,8 @@ tags: Diary
 ![image](/assets/images/251120_14.jpeg)
 
 #### <2025 마무리 목표>
-1. 양귀자 소설 읽기 (희망, 나는 소망한다 내게 금지된 것을)
-2. PTA, 이창동 영화 보기 (팬텀스레드, 매그놀리아, 펀치 드렁크 러브, 리코리쉬 피자, 데어 윌 비 블러드)
-3. 컴퓨터활용능력 필기 합격하기
+1. 양귀자 소설 (희망, 나는 소망한다 내게 금지된 것을)
+2. PTA, 이창동 영화 (팬텀스레드, 매그놀리아, 펀치 드렁크 러브, 리코리쉬 피자, 데어 윌 비 블러드)
+3. 진격의 거인, 강철의 연금술사, 데스노트
+3. 컴퓨터활용능력 필기
 4. 주식 처분 (산타랠리 제발)
