--- a/_posts/2025-11-20-Diary2.md
+++ b/_posts/2025-11-20-Diary2.md
@@ -3,6 +3,10 @@ title: 책책책 책을 읽읍시다
 tags: Diary
 ---
 
+강남 교보문고에 들러서 요즘 책들을 구경하였다.
+
+2026년에 읽고 싶은 책들
+
 ![image](/assets/images/251120_01.jpeg)
 ![image](/assets/images/251120_02.jpeg)
 ![image](/assets/images/251120_03.jpeg)
@@ -20,7 +24,7 @@ tags: Diary
 
 #### <2025 마무리 목표>
 1. 양귀자 소설 (희망, 나는 소망한다 내게 금지된 것을)
-2. PTA, 이창동 영화 (팬텀스레드, 매그놀리아, 펀치 드렁크 러브, 리코리쉬 피자, 데어 윌 비 블러드)
-3. 진격의 거인, 강철의 연금술사, 데스노트
+2. PTA, 이창동 영화 (팬텀스레드, 매그놀리아, 펀치 드렁크 러브, 리코리쉬 피자, 데어 윌 비 블러드, 시, 밀양, 박하사탕, 버닝)
+3. 클래식 애니메이션 부시기(진격의 거인, 강철의 연금술사, 데스노트)
 3. 컴퓨터활용능력 필기
-4. 주식 처분 (산타랠리 제발)
+4. 주식 처분 (경제 유튜브 / 뉴스레터 매일 보기, ~산타 랠리)
