--- a/_posts/2025-11-25-Review.md
+++ b/_posts/2025-11-25-Review.md
@@ -46,3 +46,5 @@ chapter <<얼음과자 즐기기 : 번스 사장과 행복에 관하여>>는 하
 
 ![image](/assets/images/251125_패파1.jpeg)
 ![image](/assets/images/251125_패파2.jpeg)
+
+패스트파이브에서 독서모임을 했는데 깔끔해서 좋더,,부럽
