--- a/_posts/2025-12-07-Review.md
+++ b/_posts/2025-12-07-Review.md
@@ -9,13 +9,14 @@ tags: Exhibition Review
 4. 미국 출장 중에 정말 힘들지 않았는데, 조용필 - 그래도 돼를 보고 울었는데 돌고래 유괴단 만든 뮤직 비디오도 너무 좋았고, 그러한 것들이 덤덤할 때 열심히 사는 사람들에 관한 갈채가 아닐까 싶었다. 여하튼 돌고래 유괴단을 뮤직비디오 참여로 기용한 것도 감각이고, 조용필이 영원히 오빠인 이유가 있다!
 <div>{%- include extensions/youtube.html id='MJayp_I_jvQ' -%}</div>
 
-5. 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀의 감정을 보여주는 벼랑 끝에 선 그녀의 감정이라고 들어서 굉장히 좋았다. 
+5. 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀의 감정을 보여주는 벼랑 끝에 선 그녀의 감정이라고 들어서 굉장히 좋았다. 성적인 오브젝트가 너무 많이 나와서 개인적으로는 조금 부담스러운 것이 있었는데, 루이스 브루주아는 가정 교사와 바람핀 아버지의 모습이라든가, 억압받고 있던 여성으로서의 삶으로서 그녀의 생에 관해서 알게 되니깐 그녀를 조금 더 잘 이해할 수 있게 되었다.
 
 ![image](/assets/images/251207_01.jpeg)
 ![image](/assets/images/251207_02.jpeg)
 ![image](/assets/images/251207_03.jpeg)
 ![image](/assets/images/251207_04.jpeg)
 ![image](/assets/images/251207_05.jpeg)
+여러 소재를 통해서 감정을 표현하는 예술. 예술은 수단이 아니라 목적인 그녀
 ![image](/assets/images/251207_06.jpeg)
 ![image](/assets/images/251207_07.jpeg)
 ![image](/assets/images/251207_08.jpeg)
@@ -30,6 +31,7 @@ tags: Exhibition Review
 ![image](/assets/images/251207_17.jpeg)
 ![image](/assets/images/251207_18.jpeg)
 ![image](/assets/images/251207_19.jpeg)
+전시는 보리차가 아닌 빙그레 바나나 우유와 함께
 ![image](/assets/images/251207_20.jpeg)
 ![image](/assets/images/251207_21.jpeg)
 ![image](/assets/images/251207_22.jpeg)
@@ -45,5 +47,5 @@ tags: Exhibition Review
 ![image](/assets/images/251207_31.jpeg)
 애버랜드에서 예술에 이렇게 쉽게 접할 수 있음에 감사, 불꽃놀이도 좋았다.
 
-![image](/assets/images/251207_32.jpeg)
+![image](/assets/images/251207_32.png)
 삶의 이스터에그 ! 자취방에도 하나 만들어서 넣어야겠다.
