--- a/_posts/2025-10-22-Review.md
+++ b/_posts/2025-10-22-Review.md
@@ -3,3 +3,36 @@ title: 전시 케이크와 굴러떨어진 사과
 tags: Review Exhibition
 ---
 
+![image](/assets/images/251022_01.jpeg)
+![image](/assets/images/251022_02.jpeg)
+![image](/assets/images/251022_03.jpeg)
+![image](/assets/images/251022_04.jpeg)
+![image](/assets/images/251022_05.jpeg)
+![image](/assets/images/251022_06.jpeg)
+![image](/assets/images/251022_07.jpeg)
+![image](/assets/images/251022_08.jpeg)
+![image](/assets/images/251022_09.jpeg)
+![image](/assets/images/251022_10.jpeg)
+![image](/assets/images/251022_11.jpeg)
+![image](/assets/images/251022_12.jpeg)
+![image](/assets/images/251022_13.jpeg)
+![image](/assets/images/251022_14.jpeg)
+![image](/assets/images/251022_15.jpeg)
+![image](/assets/images/251022_16.jpeg)
+![image](/assets/images/251022_17.jpeg)
+![image](/assets/images/251022_18.jpeg)
+![image](/assets/images/251022_19.jpeg)
+![image](/assets/images/251022_20.jpeg)
+![image](/assets/images/251022_21.jpeg)
+![image](/assets/images/251022_22.jpeg)
+![image](/assets/images/251022_23.jpeg)
+![image](/assets/images/251022_24.jpeg)
+![image](/assets/images/251022_25.jpeg)
+![image](/assets/images/251022_26.jpeg)
+![image](/assets/images/251022_27.jpeg)
+![image](/assets/images/251022_28.jpeg)
+
+학교 아너스 동생 형이의 개인전
+세상을 바꾼 사과는 앞으로 이브의 사과, 뉴턴의 사과, ㅇㅎ의 사과이다
+
+사과해요 나한테
