--- a/_posts/2025-12-07-Review.md
+++ b/_posts/2025-12-07-Review.md
@@ -3,13 +3,15 @@ title: 전시 루이스 브루주아 (호암 미술관)
 tags: Exhibition Review
 ---
 
-1. 올림픽이 원래 일반인들의 체육 활동이었다는 것을 알고 깜짝 놀랐다. 생활 체육이라는 개념을 통해서 전 세계인들의 건강을 증진하려는 것들이 이제는 전문인으로서의 체육으로 변화되었는데, 개인적인 차원에서 생활인의 체육에 조금 더 마음이 가는 편이다.
-2. Open AI 도 비영리 AI를 표방한다는 흐름에서 시작하여서 일반인들을 위한 그 무엇이라는 것이 있었다.
-3. 꼭 힘이 들어가서 본인에 취해서 말을 하는 사람들에 관해서 무언가 세상에 의미를 주겠다라거나, 세상에 큰 영향을 주겠다는 Ego가 큰 사람에 관한 알러지가 있어서 그런지 전시에서 큰 의미를 주겠다는 어떤 목적이 보이게 되면, 그것을 오히려 더 반감하게 된다.
-4. 미국 출장 중에 정말 힘들지 않았는데, 조용필 - 그래도 돼를 보고 울었는데 돌고래 유괴단 만든 뮤직 비디오도 너무 좋았고, 그러한 것들이 덤덤할 때 열심히 사는 사람들에 관한 갈채가 아닐까 싶었다. 여하튼 돌고래 유괴단을 뮤직비디오 참여로 기용한 것도 감각이고, 조용필이 영원히 오빠인 이유가 있다!
+1. 올림픽이 원래 비전문 일반인들의 체육 대회이었다는 것을 알고 깜짝 놀랐다. 생활 체육이라는 개념을 통해서 전 세계인들의 건강을 증진하려는 것들이 이제는 전문인으로서의 체육으로 변화되었는데, 개인적인 차원에서 생활인의 체육에 조금 더 마음이 가는 편이다.
+2. Open AI 도 비영리 AI를 표방한다는 흐름에서 시작하여서 일반인들을 위한 그 무엇이라는 것이 있었다고 한다.
+3. 꼭 힘이 들어가서 본인에 취해서 말을 하는 사람들에 알러지 반응이 있다. 무언가 세상에 의미를 주겠다라거나, 세상에 큰 영향을 주겠다는 Ego가 큰 사람에 반감이 있다. 전시에서 큰 의미를 주겠다는 어떤 목적이 보이게 되면, 그것을 오히려 더 집중을 방해하는 요소가 된다.
+4. 미국 출장 중에 정말 힘들지 않았는데, 조용필 - 그래도 돼를 보고 울었다. 돌고래유괴단이 만든 뮤직 비디오도 너무 좋았고, 그러한 것들이 묵묵하게 열심히 사는 사람들에 관한 갈채가 아닐까 싶었다. 여하튼 돌고래유괴단을 뮤직비디오 디렉터로 기용한 것도 대단하고, 조용필이 영원히 오빠인 이유가 있다!
+
 <div>{%- include extensions/youtube.html id='MJayp_I_jvQ' -%}</div>
 
-5. 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀의 감정을 보여주는 벼랑 끝에 선 그녀의 감정이라고 들어서 굉장히 좋았다. 성적인 오브젝트가 너무 많이 나와서 개인적으로는 조금 부담스러운 것이 있었는데, 루이스 브루주아는 가정 교사와 바람핀 아버지의 모습이라든가, 억압받고 있던 여성으로서의 삶으로서 그녀의 생에 관해서 알게 되니깐 그녀를 조금 더 잘 이해할 수 있게 되었다.
+
+5. 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀는  벼랑 끝에 서서 하다하다 안돼서 표현하는 그녀의 감정이라고 느껴져서 좋았다. 성적인 오브젝트가 너무 많이 나와서 개인적으로는 조금 부담스러웠는데, 루이스 브루주아는 가정 교사와 바람핀 아버지의 모습이라든가, 억압받고 있던 여성으로서의 삶으로서 감정 그 자체를 보여주려는 것이었다. 그녀의 생에 관해서 알게 되니깐 그녀를 조금 더 잘 이해할 수 있게 되어 어느 사람을 이해하든 그 사람의 모든 면면을 보는 것이 중요하다. (그렇다고 모든 면을 용서하자는 예수가 되자는 것은 또 아니고)
 
 ![image](/assets/images/251207_01.jpeg)
 ![image](/assets/images/251207_02.jpeg)
