--- a/_posts/2025-12-07-Review.md
+++ b/_posts/2025-12-07-Review.md
@@ -11,7 +11,7 @@ tags: Exhibition Review
 <div>{%- include extensions/youtube.html id='MJayp_I_jvQ' -%}</div>
 
 
-5. 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀는  벼랑 끝에 서서 하다하다 안돼서 표현하는 그녀의 감정이라고 느껴져서 좋았다. 성적인 오브젝트가 너무 많이 나와서 개인적으로는 조금 부담스러웠는데, 루이스 브루주아는 가정 교사와 바람핀 아버지의 모습이라든가, 억압받고 있던 여성으로서의 삶으로서 감정 그 자체를 보여주려는 것이었다. 그녀의 생에 관해서 알게 되니깐 그녀를 조금 더 잘 이해할 수 있게 되어 어느 사람을 이해하든 그 사람의 모든 면면을 보는 것이 중요하다. (그렇다고 모든 면을 용서하자는 예수가 되자는 것은 또 아니고)
+ 루이스 브루주아 전시를 보면서 처음에는 목적성이 있어서 작품을 만드는 사회 참여 여성 예술가라고 생각했지만, 그녀는  벼랑 끝에 서서 하다하다 안돼서 표현하는 그녀의 감정이라고 느껴져서 좋았다. 성적인 오브젝트가 너무 많이 나와서 개인적으로는 조금 부담스러웠는데, 루이스 브루주아는 가정 교사와 바람핀 아버지의 모습이라든가, 억압받고 있던 여성으로서의 삶으로서 감정 그 자체를 보여주려는 것이었다. 그녀의 생에 관해서 알게 되니깐 그녀를 조금 더 잘 이해할 수 있게 되어 어느 사람을 이해하든 그 사람의 모든 면면을 보는 것이 중요하다. (그렇다고 모든 면을 용서하자는 예수가 되자는 것은 또 아니고)
 
 ![image](/assets/images/251207_01.jpeg)
 ![image](/assets/images/251207_02.jpeg)
@@ -50,4 +50,4 @@ tags: Exhibition Review
 애버랜드에서 예술에 이렇게 쉽게 접할 수 있음에 감사, 불꽃놀이도 좋았다.
 
 ![image](/assets/images/251207_32.png)
-삶의 이스터에그 ! 자취방에도 하나 만들어서 넣어야겠다.
+삶의 이스터에그 ! 자취방에도 하나 만들어서 놓아야겠다.
