--- a/_posts/2025-11-02-Review.md
+++ b/_posts/2025-11-02-Review.md
@@ -19,3 +19,32 @@ tags: Review Book
 인류가 연대하고 협력하고 공감하는 것들에 관한 의미를 보여준 책. 그렇기 때문에 너의 것을 하는 것 이상으로 남의 것을 하는 것이 중요하다 반대편으로는 반대의 사르트르의 책도 읽어보는 것이 좋을 것이라근 생각 (왜냐하면 사르트르는 계속 카뮈를 깠으니깐)
 
 <div>{%- include extensions/youtube.html id='homZR42hfMQ' -%}</div>
+
+> 이방인 읽으면서 들었던 생각들
+
+P30 그녀가 부표 위로 기어오르는 것을 거들어 주다가 그녀의 가슴을 스쳤다. 내가 아직 물속에 있는 동안 그녀는 벌써 부표 위에서 배를 깔고 엎드렸다. 그녀가 나를 향해 몸을 돌렸다. (중략) 그녀가 아무 말이 없어서 계속 그러고 있었다. 온 하늘이 내 누눈으로 들어오는 것 같았다. 푸른 데다 황금처럼 빝났다. 
+=> 삶에 관한 권태를 느끼는 것과 다르게 이 긴 묘사들이 결국에 인지하고 있는 시점 안에서의 애정이 드러나는데, 그것을 자꾸 부정하는 것이 굉장히 짜치는 것처럼 느껴진다.
+
+P36 한 예순살 정도 되셨어요. 라고 말했다 => 예순 살 정도에 생을 마감한 사람이 있다는 것이 안타까워 흑흑
+
+P38 어둑어둑한 츷ㅇ계를 오르다가 같은 층에 사는 살라마노 영감을 마주쳤다. 
+=> 오히려 감정적인 권태를 느끼는 것보다야 그들의 책무를 다하고 감정적인 것보다 체계를 보여주는 이 모습이 얼마나 인류애스러운지 모르겠다. 
+
+P48 나는 붉고 흰 줄무늬의 아름다운 원피스를 입고 가죽 샌들을 ㅅㄴ은 그녀에게 강한 욕정을 느꼈다.
+=> 묄소가 어떠한 욕망을 느끼는 것은 상대방에 관한 것이나 
+
+58 학생 때는 야심이 좀 있었다. 그러나 학업을 포기해야 했을 때 그런 것들이 중요하지 않다는 것을 너무 일찍 깨달았던 것이다.
+
+85 정상적ㅇ니 사람들이라면 누구나 사랑하는 사람ㄷ르의 죽음을 어느 정도는 바라기도 하는 법이라고 말하자 변호사가 매우 흥분한 듯 내 말을 가로 막았다.
+=> 이것이 의미하는 것은 무엇일까 
+
+98 내 왼편에 있던 청년과 그의 어머니는 여전히 말없이 바라보고 만 있었다. 아람인들ㄹ의 웅얼거리는 소리는 우리 발밑에서 들리는 듯 계속 됐다. 밖에서는 햇빛이 창에 부딪혀 부풀어 커지는 ㅓㅅ처럼 느껴졌다.
+=> 전반적으로 케릭터가 대비되는 모습을 지속적으로 보여주면서 뫼루소가 얼마나 다른지에 관해서 부각적으로 보여주고 있다고 느꼈다.
+
+101 그러나 당신들을 형무소에 가두는 건 바로 그것 때문이라오
+그가 말했다
+그것 때문이라뇨
+자유라는 게 바로 그런 거거든요. 당신들한테서 자유를 빼앗는 거 말ㄹ이오
+=> 이 말이 정말 정수처럼 느껴진다. 삶에로의 환희를 부정하는 것과 동싯에 부조리한 삶에서의 우리가 견지해야하는 것 그것이 얼마나 못하게 하고 있는 것에 관한 찬미
+
+111 균형이 잘 잡히지 않은 얼굴에서 맑은 두 눈만이 보였다. 그눈능ㄴ 어떤 명확한 표정도 없이 나를 세심하게 관찰하고만 있었다. 그러자 내 눈으로 냐 자신을 보고 있는 것 같은 이상야릇한 느낌을 받았다.
