--- a/_posts/2026-01-03-Review.md
+++ b/_posts/2026-01-03-Review.md
@@ -3,6 +3,8 @@ title: 영화 F1
 tags: Review Movie 
 ---
 
+![image](/assets/images/260101_1.png)
+
 새해 첫 영화, 가슴 뜨거워지는 열정과 알력다툼
 
 연출이 좋았지만, 애플의 간접 광고 덕분에 애플 제품들이 많이 보였는데
