--- a/_posts/2026-01-16-Review.md
+++ b/_posts/2026-01-16-Review.md
@@ -3,4 +3,11 @@ title: 영화 버닝
 tags: Review Movie 
 ---
 
+<div>{%- include extensions/youtube.html id='48qqjVLUUMY' -%}</div>
+
+
 이창동의 영화는 사회의식이 강렬해서 좋다. 다른 영화로는 PTA의 팬텀스레드가 있는데, 하나의 완전한 소설을 보여주고 그 안에서의 재미를 주었던 것이라고 하면, 한국 영화에서 보여주는 은근한 사회 비판 시선과 함꼐 그것을 위한 소소한 위로
+
+
+<div>{%- include extensions/youtube.html id='RrRPdeJ94Zw' -%}</div>
+
