--- a/_posts/2026-02-01-Review.md
+++ b/_posts/2026-02-01-Review.md
@@ -1,10 +1,12 @@
 ---
-title: 책 차별하지 앟ㄴ는다는 착각
+title: 책 차별하지 않는다는 착각
 tags: Review Book
 ---
 
-![image](/assets/images/260201_책.jpeg)
+![image](/assets/images/260201_01.jpeg)
 
-차별은 어떻게 생겨나고 왜 반복되는가에 관한 홍성수 성신여대 법과대학 교수님의 차별금지법에 관한 이야기를 전개하였다. 법학대학 교수님답게 차별에 관해서 법리적으로 어떻게 해석하는지 어떻게 진행되는지에 관한 논리를 1,2부에서 이야기를 하고 있고, 3,4부에는 왜 차별금지법이 제정되어야 하는지에 관해서 이야기를 하고 있다.
+차별은 어떻게 생겨나고 왜 반복되는가에 관한 홍성수 성신여대 법과대학 교수님의 차별금지법에 관한 이야기를 전개하는 책이었다. 법학대학 교수님답게 차별에 관해서 법리적으로 어떻게 해석하는지 어떻게 근거를 가지게 되는지에 관한 모습을 보여주었다. 1,2부에서 차별에 관한 정의, 차별에 관한 케이스 를 이야기 하고 있고, 3,4부에는 왜 차별금지법이 제정되어야 하는지에 관한 주장을 이야기 하고 있다.
 
-차별금지에 관한 하나의 건 바이 건으로 이야기를 하고 있는 것에 관해서 법리적인 층위를 쌓아가고 주장하는지에 관해서 알게 되어서 좋았다. 법을 하는 사람들은 이러한 차이를 생각으로 가져가는구나 알게 욌다.
+법리적인 층위를 쌓아가고 주장하는지에 관해서 알게 되어서 좋았지만 상대적이고 정치적인 아젠다답게,  모호한 측면이 없지 않아 있었다. (콜로라도 개신교 빵주인이 퀴어의 케이크 제작을 거부한 사례, 공과대학교에서 여성 교수의 임용을 제한하는 사례)
+
+사적 영역에서 일어나느 차별과 공적 영역에서 일어나는 차별에 관해서 이야기를 하는 차이에 관해셔 설명을 해주고, 어떻게 다르고, 예를 들어서 노키즈 존에 관해서 규정을 하게 되면 아이들을 가지고 있는 사람들에게는 결국에 카페를 선택할 때마다 노티즈존인지 생각해야하는 하나의 구성원으로서의 환대가 없어지기 때문에 효용론 측면에서 더 합리적이다라고 이야기를 하고 있는 부분이 있어서 좋았다.
