--- a/_posts/2026-01-25-Review.md
+++ b/_posts/2026-01-25-Review.md
@@ -8,3 +8,7 @@ tags: Review Book
 ![image](/assets/images/260125_03.jpeg)
 
 너무 어려웠다
+
+괴물과 싸우기 위해서는 괴물과 닮지 않기 위해 노력해야 한다. 당신은 심연을 들여다볼 때 심연은 당신을 들여다본다.
+
+의 좋은 어구가 있어서 
