--- a/_posts/2026-02-01-Review.md
+++ b/_posts/2026-02-01-Review.md
@@ -5,7 +5,7 @@ tags: Review Book
 
 ![image](/assets/images/260201_01.jpeg)
 
-차별은 어떻게 생겨나고 왜 반복되는가에 관한 홍성수 성신여대 법과대학 교수님의 차별금지법에 관한 이야기를 전개하는 책이었다. 법학대학 교수님답게 차별에 관해서 법리적으로 어떻게 해석하는지 어떻게 근거를 가지게 되는지에 관한 모습을 보여주었다. 1,2부에서 차별에 관한 정의, 차별에 관한 케이스 를 이야기 하고 있고, 3,4부에는 왜 차별금지법이 제정되어야 하는지에 관한 주장을 이야기 하고 있다.
+차별은 어떻게 생겨나고 왜 반복되는가에 관한 홍성수 숙명여대 법과대학 교수님의 차별금지법에 관한 이야기를 전개하는 책이었다. 법학대학 교수님답게 차별에 관해서 법리적으로 어떻게 해석하는지 어떻게 근거를 가지게 되는지에 관한 모습을 보여주었다. 1,2부에서 차별에 관한 정의, 차별에 관한 케이스 를 이야기 하고 있고, 3,4부에는 왜 차별금지법이 제정되어야 하는지에 관한 주장을 이야기 하고 있다.
 
 법리적인 층위를 쌓아가고 주장하는지에 관해서 알게 되어서 좋았지만 상대적이고 정치적인 아젠다답게,  모호한 측면이 없지 않아 있었다. (콜로라도 개신교 빵주인이 퀴어의 케이크 제작을 거부한 사례, 공과대학교에서 여성 교수의 임용을 제한하는 사례)
 
