--- a/_posts/2026-01-25-Review.md
+++ b/_posts/2026-01-25-Review.md
@@ -11,4 +11,6 @@ tags: Review Book
 
 괴물과 싸우기 위해서는 괴물과 닮지 않기 위해 노력해야 한다. 당신은 심연을 들여다볼 때 심연은 당신을 들여다본다.
 
-의 좋은 어구가 있어서 
+의 좋은 문구가 잠언에 있어서 좋았다.
+
+그 이외에는 너무 어려웠고, 니체 자체가 모두까기 인형이어서 독일인도 까고, 영국인도 까고 다까서 유쾌한 책이었다. 
