--- a/_posts/2026-02-01-Review.md
+++ b/_posts/2026-02-01-Review.md
@@ -10,3 +10,5 @@ tags: Review Book
 법리적인 층위를 쌓아가고 주장하는지에 관해서 알게 되어서 좋았지만 상대적이고 정치적인 아젠다답게,  모호한 측면이 없지 않아 있었다. (콜로라도 개신교 빵주인이 퀴어의 케이크 제작을 거부한 사례, 공과대학교에서 여성 교수의 임용을 제한하는 사례)
 
 사적 영역에서 일어나느 차별과 공적 영역에서 일어나는 차별에 관해서 이야기를 하는 차이에 관해셔 설명을 해주고, 어떻게 다르고, 예를 들어서 노키즈 존에 관해서 규정을 하게 되면 아이들을 가지고 있는 사람들에게는 결국에 카페를 선택할 때마다 노티즈존인지 생각해야하는 하나의 구성원으로서의 환대가 없어지기 때문에 효용론 측면에서 더 합리적이다라고 이야기를 하고 있는 부분이 있어서 좋았다.
+
+뜻깊었던 것은 차별금지에 관한 항목으로 결혼, 사별, 이혼에 관한 것도 태생적으로 변경 불가능하다는 이야기를 넣음으로서 하나의 요소로 넣은 것도 좋았다. 결국에 그러한 것들은 개인적인 차원에서 콘트롤이 불가능하다고 보는 것인지 ... 
