--- a/_posts/2026-02-27-Review.md
+++ b/_posts/2026-02-27-Review.md
@@ -3,6 +3,10 @@ title: 애니 타코피의 원죄
 tags: Review Animation
 ---
 
+![image](/assets/images/260227_1.png)
+
+작품명 : 어둠의 도라에몽 (2025)
+
 어둠의 도라에몽이라고 유명한 타코피의 원죄를 봤다.
 
 외계 행성에서 온 타코피라는 문어 모양 스즈카, 미라미 등의 아이들의 아픈 상처가 있는 것들을 여러 신기한 도구를 통해서 아이들을 구원해주는 이야기인데, 결국에 그것을 아무것도 해결해주지 못하기 때문에 나중에 직적적인 도움보다는 간접적인 도움을 통해서만 도움을 주게 된다.
