--- a/_posts/2026-02-23-Diary.md
+++ b/_posts/2026-02-23-Diary.md
@@ -5,6 +5,6 @@ tags: Diary
 
 ![image](/assets/images/260223_01.png)
 
-인생에 재밌는 것이 왜이리 많을까 그냥 이런 것들만 하면서 성장해도 완전 1년 꽉꽉 채우면서 지낼 수 있을 것 같아
+인생에 재밌는 것이 왜이리 많을까 그냥 이런 것들만 해도 완전 1년 꽉꽉 채우면서 지낼 수 있을 것 같아
 
 <div>{%- include extensions/youtube.html id='dOQTeojf2SI' -%}</div>
